--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -23,22 +23,27 @@
 * [[Wild gourd|ᎢᎾᎨ ᎡᎯ ᎦᏄᎸ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Cucurbitaceae marah]]''
 * [[Wild onion|ᎢᎾᎨ ᎡᎯ ᏒᎩ]] <ref name=h232/> - ''[[Allium canadense]]'' ᎠᎴ ''[[Allium vineale]]''
 * [[Walking fern|ᎢᏅᏓ ᎦᏅᎪ]] <ref name=h232/> ([[ᎢᎾᏚᎦᏂᎦ]], [[ᎢᎾᏓᎦᏅᎧ]] <!--Snake-tongue>--, [[ᎶᏈᏏ]]<!--star-->) – [[Asplenium rhizophyllum]] <ref>Banks 20</ref>
-* [[Hazelnut|ᎢᏩᎩᏓ]] <ref name=h231/> - ''[[Corylus]]''
 * [[Pumpkin|ᎢᏯ]] - ''[[Cucurbita pepo]]'', ''[[Cucurbita mixta]]'', ''[[Cucurbita maxima]]'', ᎠᎴ ''[[Cucurbita moschata]]''
 
 == Ꭴ ==
+* [[Sweetgrass|ᎤᎦᎾᏍᏔ]] - ''[[Muhlenbergia filipes]]'' ᎠᎴ ''[[Hierochloe odorata]]''
+* [[Poision ivy|ᎤᎸᏓ]] - ''[[Toxicodendron radicans]]''
 * [[Ivy|ᎤᎸᏗ]] <ref name=h231/> - ''[[Hedera]]''
 * [[Witch hazel|ᎤᏂᎩᎾ]] <ref name=h232/> - ''[[Hamamelis]]''
 * [[Blackgum|ᎤᏂᏆ]] <ref name=h231/> - ''[[Nyssa sylvatica]]''
 * [[Burdock|ᎤᏂᏍᏗᎸᏍᏗ ᏧᎳᎾ]] <ref name=h231/> - ''[[Arctium]]''
 * [[Spice peaches|ᎤᏂᏩᎦ]] <ref name=h232/>
 * [[Milkweed|ᎤᏅᏗ ᎠᏔᏍᎩᏍᎩ]] <ref name=h232/> - ''[[Asclepias]]''
+* [[Cabbage|ᎤᏍᎨᏫ]] - ''[[Brassica oleracea]]''
+* [[Holly|ᎤᏍᏓᏍᏗ]] - ''Ilex'' spp.
 * [[White ball weed|ᎤᏍᏗᏝᎯ]] <ref name=h232/>
 * [[Buckeye|ᎤᏍᏆᏓ]] <ref name=h231/> - ''[[Aesculus]]''
 * [[Rattlesnake fern|ᎤᏎᎵᏘ]] – ''[[Botrypus virginianus]]''<ref name=b19/>
 * [[Beech|ᎤᏙᎳᏂ]] <ref name=h231/> - ''[[Fagus]]''
 * [[Sweet Annie weed|ᎤᏚᎾᏍᏓ]] <ref name=h231/> - ''[[Artemisia annua]]''
 * [[Dewberry|ᎤᏠᏏᏅᏓ]] <ref name=h231/> - ''[[Rubus]]'' subspecies ''[[Eubatus]]''
+* [[Wheat|ᎤᏣᎵᏍᏗ]] - ''[[Triticum]]'' spp.
+* [[Passionflower|ᎤᏩᎦ]] - ''[[Passiflora]]'' spp.
 * [[Wire weed|ᎤᏪᏙᎢᏓ]] <ref name=h232/> - ''[[Sida acuta]]''
 
 == Ꭶ ==
@@ -103,6 +108,9 @@
 * [[Plum|ᏆᏄᎾᏍᏗ]] - ''[[Prunus]]'' spp.
 * [[Peach|ᏆᏅ]] - ''[[Prunus persica]]''
 
+==Ꮝ==
+*[[Squash|ᏍᏆᏏ]] - ''[[Cucurbita maxima]]'', ''[[Cucurbita mixta]]'', ''[[Cucurbita moschata]]'', ᎠᎴ ''[[Cucurbita pepo]]''
+
 == Ꮜ ==
 * [[Persimmon|ᏌᎵ]] - ''[[Diospyros]]''
 * [[Squirrel tail|ᏌᎶᎵ ᎦᏙᎦ]] <ref name=h232/> - ''[[Achillea millefolium]]''<ref name=nc>[http://www.cherokee-nc.com/index.php?page=45 "Medicinal Herbs."] ''Cherokee Outdoors.'' (15 ᏅᏓᏕᏆ 2010)</ref>
@@ -110,6 +118,7 @@
 
 == Ꮞ ==
 * [[Walnut|ᏎᏗ]] - ''[[Juglandaceae]]''
+* [[Pear|ᏎᏗ ᎢᏳᏍᏗ ᏒᎦᏔ]] - ''[[Pyrus]]''
 * [[Corn|ᏎᎷ]] <ref name=h232/> - ''[[Zea mays]]''
 * [[Sage|ᏎᏥ ᏒᏟ]] <ref name=h232/> - ''[[Salvia]]''
 
@@ -118,6 +127,7 @@
 
 == Ꮢ ==
 * [[Apple|ᏒᎦᏔ]] <ref name=h231/> - ''[[Malus]]''
+* [[Onion|ᏒᎦ]] - ''[[Allium]]'' (''[[Allium cepa]]'')
 * [[Stink weed|ᏒᏟ]] <ref name=h232/><!--ᏰᎵᏊ ᏱᎩ ''Thlaspi arvense''-->
 * [[Penderile weed|ᏒᏟ ᎤᏍᏗᎢ]] <ref name=h232/>
 
@@ -126,6 +136,9 @@
 * [[Turnip|ᏓᏈᏌᏂ]] ([[ᏓᏆᏌᏅ]]) <ref name=h232/> - ''[[Brassica rapa]]''
 * [[Elm|ᏓᏩᏥᎳ]] <ref name=h231/> - ''[[Ulmus]]''
 
+==Ꮤ==
+* [[Tomato|ᏔᎹᏟ]] ([[ᎤᎾᎫᎯᏍᏗ]]) - ''[[Solanum lycopersicum]]''
+
 == Ꮧ ==
 * [[Willow|ᏗᎵᎦᎵᏍᎩ]] - ''[[Salix]]''
 * [[White root|ᏗᎵᎦᎵᏍᎩ ᎤᏍᏗᎢ]] <ref name=h232/>
@@ -133,7 +146,11 @@
 * [[Spider weed|ᏗᎾᏓᏁᏍᎩ]] <ref name=h232/>
 * [[Poison bean|ᏗᏓᏅᏕᏍᎩ]] <ref name=h232/> - ''[[Sesbania drummondii]] ''
 
+==Ꮨ==
+*[[Chestnut|ᏘᎵ]] - ''[[Fagaceae]]'' (''[[Castanea dentata]]'')
+
 == Ꮪ ==
+* [[Bean|ᏚᎳ]] - ''[[Fabaceae]]'' spp.
 * [[Peanut|ᏚᏯ ᎠᏂᎳᏗᏍᎩ]] - ''[[Arachis hypogaea]]''
 
 == Ꮲ ==
@@ -161,17 +178,18 @@
 * [[Red tulip|ᏧᏳᎮᎵᏗ]] <ref name=h232/>
 
 == Ꮹ ==
+* [[Honeysuckle|ᏩᎴᎳ ᎤᏂᏥᎳᎩᏍᏗ]] <ref name=h231/> - ''[[Lonicera]]''
 * [[Hickory|ᏩᏁᎢ]] <ref name=h231/> - ''[[Corylus]]''
 * [[Pigeon tail|ᏩᏯ ᎦᏩᏙᎦ]] <ref name=h232/>
 
 == Ꮺ ==
 * [[Horehound|ᏪᏌ ᎤᏂᎩᏍᏗ]] <ref name=h231/> - ''[[Marrubium vulgare]]''
 
-== Ᏻ ==
-* [[Wood-fern|ᏯᎾ ᎤᏤᏍᏔ]] – ''[[Dryopteris]]'' spp.<ref name=b20/>
+== Ꮿ ==
+* [[Wood-fern|ᏯᎾ ᎤᏤᏍᏔ]] – ''[[Dryopteris]]'' spp. <ref name=b20/>
 
 == Ᏻ ==
-* [[Honeysuckle|ᏩᎴᎳ ᎤᏂᏥᎳᎩᏍᏗ]] <ref name=h231/> - ''[[Lonicera]]''
+* [[Hazelnut|ᏳᎩᏓ]] ([[ᎢᏩᎩᏓ]] <ref name=h231/>) - ''[[Corylus]]'' spp.
 * [[Hickory-weed|ᏳᏁᎩᏛ]] <ref name=h231/>
 
 </div><div style="float:left; width:100%;">
