--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -35,15 +35,15 @@
 * [[Spice peaches|ᎤᏂᏩᎦ]] <ref name=h232/>
 * [[Milkweed|ᎤᏅᏗ ᎠᏔᏍᎩᏍᎩ]] <ref name=h232/> - ''[[Asclepias]]''
 * [[Cabbage|ᎤᏍᎨᏫ]] - ''[[Brassica oleracea]]''
-* [[Holly|ᎤᏍᏓᏍᏗ]] - ''Ilex'' spp.
+* [[Holly|ᎤᏍᏓᏍᏗ]] - ''Ilex'' 
 * [[White ball weed|ᎤᏍᏗᏝᎯ]] <ref name=h232/>
 * [[Buckeye|ᎤᏍᏆᏓ]] <ref name=h231/> - ''[[Aesculus]]''
 * [[Rattlesnake fern|ᎤᏎᎵᏘ]] – ''[[Botrypus virginianus]]''<ref name=b19/>
 * [[Beech|ᎤᏙᎳᏂ]] <ref name=h231/> - ''[[Fagus]]''
 * [[Sweet Annie weed|ᎤᏚᎾᏍᏓ]] <ref name=h231/> - ''[[Artemisia annua]]''
 * [[Dewberry|ᎤᏠᏏᏅᏓ]] <ref name=h231/> - ''[[Rubus]]'' subspecies ''[[Eubatus]]''
-* [[Wheat|ᎤᏣᎵᏍᏗ]] - ''[[Triticum]]'' spp.
-* [[Passionflower|ᎤᏩᎦ]] - ''[[Passiflora]]'' spp.
+* [[Wheat|ᎤᏣᎵᏍᏗ]] - ''[[Triticum]]'' 
+* [[Passionflower|ᎤᏩᎦ]] - ''[[Passiflora]]''
 * [[Wire weed|ᎤᏪᏙᎢᏓ]] <ref name=h232/> - ''[[Sida acuta]]''
 
 == Ꭶ ==
@@ -56,9 +56,9 @@
 * [[Locust tree|ᎧᎶᏪᎩᏗ]] <ref name=h232/> ([[ᎧᎶᏇᎩᏗ]]) - ''[[Gleditsia]]''
 :* [[Honey tree|ᎧᎵᏎᏥ]] <ref name=h231/> - ''[[Gleditsia triacanthos]]'' <!--assuming this is a honey locust-->
 * [[Sassafras|ᎧᎾᏏᏔ]] - ''[[Sassafras]]''
-* [[Blackberry|ᎧᏁᎦᏟ]] <ref name=h231/> - ''[[Rubus]]'' spp., ''[[Rubus pensilvanicus]]'', ''[[Rubus occidentalis]]''
+* [[Blackberry|ᎧᏁᎦᏟ]] <ref name=h231/> - ''[[Rubus]]'' (''[[Rubus pensilvanicus]]'', ''[[Rubus occidentalis]]'')
 * [[Blue grass|ᎧᏁᏍᎩᏪᏗ]] <ref name=h231/> - ''[[Poa]]'' (esp. ''[[Poa pratensis]]''
-* [[Dogwood|ᎧᏅᏏᏔ]] <ref name=h231/> - ''[[Cornus]] spp.''
+* [[Dogwood|ᎧᏅᏏᏔ]] <ref name=h231/> - ''[[Cornus]]
 * [[Coffee weed|ᎧᏫ ᎢᏳᏍᏗ]] <ref name=h231/> - ''[[Rumex crispus]]''<ref name=nc/>
 
 == Ꭹ ==
@@ -105,7 +105,7 @@
 
 ==Ꮖ==
 * [[Banana|ᏆᏁᎾ]] - ''[[Musa]]''
-* [[Plum|ᏆᏄᎾᏍᏗ]] - ''[[Prunus]]'' spp.
+* [[Plum|ᏆᏄᎾᏍᏗ]] - ''[[Prunus]]''
 * [[Peach|ᏆᏅ]] - ''[[Prunus persica]]''
 
 ==Ꮝ==
@@ -150,7 +150,7 @@
 *[[Chestnut|ᏘᎵ]] - ''[[Fagaceae]]'' (''[[Castanea dentata]]'')
 
 == Ꮪ ==
-* [[Bean|ᏚᎳ]] - ''[[Fabaceae]]'' spp.
+* [[Bean|ᏚᎳ]] - ''[[Fabaceae]]''
 * [[Peanut|ᏚᏯ ᎠᏂᎳᏗᏍᎩ]] - ''[[Arachis hypogaea]]''
 
 == Ꮲ ==
@@ -167,8 +167,8 @@
 * [[Tobacco weed|ᏦᎳ ᎢᏳᏍᏗ]] <ref name=h232/> - ''[[Verbascum]]'' <!--mullein--><ref name=nc/>
 
 == Ꮷ ==
-* [[Ash|ᏧᎦᏃᏅ]] <ref name=h231/> - ''[[Fraxinus]] spp.''
-* [[Birch|ᏧᏁᏃᏅᏗ]] <ref name=h231/> - ''[[Betula]] spp.''
+* [[Ash|ᏧᎦᏃᏅ]] <ref name=h231/> - ''[[Fraxinus]]''
+* [[Birch|ᏧᏁᏃᏅᏗ]] <ref name=h231/> - ''[[Betula]]''
 * [[Pin burse weed|ᏧᏂᏆᏘ ᎤᏂᏍᏗᎸᏍᏗ]] <ref name=h232/>
 * [[Briar|ᏧᏂᏣᏲᏍᏗ]] <ref name=h231/> - ''[[Rosa]]'', ''[[Rubus]]'', ᎠᎴ ''[[Smilax]]''
 * [[Silver bur ragweed|ᏧᏅᏍᏗ ᎤᏂᏍᏗᎸᏍᏗ]] <ref name=h232/> - ''[[Ambrosia chamissonis]]''
@@ -186,10 +186,10 @@
 * [[Horehound|ᏪᏌ ᎤᏂᎩᏍᏗ]] <ref name=h231/> - ''[[Marrubium vulgare]]''
 
 == Ꮿ ==
-* [[Wood-fern|ᏯᎾ ᎤᏤᏍᏔ]] – ''[[Dryopteris]]'' spp. <ref name=b20/>
+* [[Wood-fern|ᏯᎾ ᎤᏤᏍᏔ]] – ''[[Dryopteris]]'' <ref name=b20/>
 
 == Ᏻ ==
-* [[Hazelnut|ᏳᎩᏓ]] ([[ᎢᏩᎩᏓ]] <ref name=h231/>) - ''[[Corylus]]'' spp.
+* [[Hazelnut|ᏳᎩᏓ]] ([[ᎢᏩᎩᏓ]] <ref name=h231/>) - ''[[Corylus]]''
 * [[Hickory-weed|ᏳᏁᎩᏛ]] <ref name=h231/>
 
 </div><div style="float:left; width:100%;">
