--- a/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
+++ b/ᏗᎦᎪᏗ_ᏚᎾᏙᎥ_ᏙᎪᏪᎸ.mw
@@ -22,7 +22,7 @@
 * [[Hay-scented fern|ᎢᎦᎵᎤᏰᎳᎠ]] – ''[[Dennstaedtia punctilobula]]''<ref name=b20/>
 * [[Wild gourd|ᎢᎾᎨ ᎡᎯ ᎦᏄᎸ]] <ref name=h232/> - ᏰᎵᏊ ᏱᎩ ''[[Cucurbitaceae marah]]''
 * [[Wild onion|ᎢᎾᎨ ᎡᎯ ᏒᎩ]] <ref name=h232/> - ''[[Allium canadense]]'' ᎠᎴ ''[[Allium vineale]]''
-* [[Walking fern|ᎢᏅᏓ ᎦᏅᎪ]] <ref name=h232/> ([[ᎢᎾᏚᎦᏂᎦ]], [[ᎢᎾᏓᎦᏅᎧ]] <!--Snake-tongue>--, [[ᎶᏈᏏ]]<!--star-->) – [[Asplenium rhizophyllum]] <ref>Banks 20</ref>
+* [[Walking fern|ᎢᏅᏓ ᎦᏅᎪ]] <ref name=h232/> ([[ᎢᎾᏚᎦᏂᎦ]], [[ᎢᎾᏓᎦᏅᎧ]] <!--Snake-tongue>--, [[ᎶᏈᏏ]]<!--star-->) – [[Asplenium rhizophyllum]] <ref name=b20/>
 * [[Pumpkin|ᎢᏯ]] - ''[[Cucurbita pepo]]'', ''[[Cucurbita mixta]]'', ''[[Cucurbita maxima]]'', ᎠᎴ ''[[Cucurbita moschata]]''
 
 == Ꭴ ==
@@ -58,7 +58,8 @@
 * [[Sassafras|ᎧᎾᏏᏔ]] - ''[[Sassafras]]''
 * [[Blackberry|ᎧᏁᎦᏟ]] <ref name=h231/> - ''[[Rubus]]'' (''[[Rubus pensilvanicus]]'', ''[[Rubus occidentalis]]'')
 * [[Blue grass|ᎧᏁᏍᎩᏪᏗ]] <ref name=h231/> - ''[[Poa]]'' (esp. ''[[Poa pratensis]]''
-* [[Dogwood|ᎧᏅᏏᏔ]] <ref name=h231/> - ''[[Cornus]]
+* [[Dogwood|ᎧᏅᏏᏔ]] <ref name=h231/> - ''[[Cornus florida]]'' <ref name=nvwoti>Winston, David. [http://www.herbaltherapeutics.net/CherokeeMed.(expanded)805.pdf "ᏅᏬᏘ: ᏣᎳᎩ ᏅᏬᏘ ᎠᎴ Ethnobotany."] ''Herbal Theurapeutics.'' 2001. (16 ᏅᏓᏕᏆ 2010)<!--this seems new age-y but the translations look solid--></ref>
+* [[Rabbit tobacco|ᎧᏧᏔ ᎡᏆ]] - ''[[Gnaphalium obtusifolium]]'' <ref name=nvwoti/>
 * [[Coffee weed|ᎧᏫ ᎢᏳᏍᏗ]] <ref name=h231/> - ''[[Rumex crispus]]''<ref name=nc/>
 
 == Ꭹ ==
@@ -87,23 +88,24 @@
 * [[Moody grass|ᎽᏗ ᎦᏄᎧᎢ]] <ref name=h232/> - ''[[Cynodon dactylon]]''
 
 ==Ꮓ==
-* [[Spicewood|ᏃᏓᏥ]] - ᏰᎵᏊ ᏱᎩ ''[[Cercis canadensis]]''
+* [[Spicewood|ᏃᏓᏥ]] ([[ᏃᏓᏧ]]) - ''[[Lindera benzoin]]'' <ref name=nvwoti/> 
 * [[Hemlock|ᏃᏄ]] – ''[[Tsuga canadensis]]''<ref>Banks 22</ref>
-* [[Pine|ᏃᏥ]] – ''[[Short leaf pine|Pinus echinata]]'', ''[[Table mountain pine|Pinus pungens]]'', ᎠᎴ  ''[[Virginia pine|Pinus virginiana]]''<ref name=p21/>
+* [[Pine|ᏃᏥ]] – ''[[Short leaf pine|Pinus echinata]]'', ''[[Table mountain pine|Pinus pungens]]'', ᎠᎴ  ''[[Virginia pine|Pinus virginiana]]'' <ref name=b21/>
 * [[Pineapple|ᏃᏥ ᎢᏳᏍᏗ ᏒᎦᏔ]] - ''[[Ananas comosus]]''
 
 == Ꮔ ==
 * [[Potato|ᏄᏅ]] ([[ᏄᎾ]]) - ''[[Solanum tuberosum]]''
 * [[Sweet potato|ᏄᏅ ᎤᎦᎾᏍᏛ]] - ''[[Ipomoea batatas]]''
-* [[Wild ginger|ᏄᏱᎦᎳ ᏗᎾᏓᏁᏍᎩ ᎤᏔᎾ]] - <!--Big Stretch--><ref name=nc/> - ᏰᎵᏊ ᏱᎩ  ''[[Asarum]]''
+* [[Wild ginger|ᏄᏱᎦᎳ ᏗᎾᏓᏁᏍᎩ ᎤᏔᎾ]] <!--Big Stretch--><ref name=nc/> - ᏰᎵᏊ ᏱᎩ  ''[[Asarum]]''
 * [[Aster|ᏄᏱᎦᎵ]] <ref name=h231/> - ''[[Aster]]'' (''[[Aster subulatus]]'') 
 </div><div style="float:right; width:49%;">
 
 == Ꮕ ==
 * [[Wild clover|ᏅᎩ ᏧᎦᏅᏓᏗ ᎦᏄᎸᎢ]] <ref name=h232/> - ''[[Trifolium]]''
-* [[Sourwood|ᏅᏙᏇᏯᏈᎬᎢ]] - ''[[Oxydendrum arboreum]]''
+* [[Sourwood|ᏅᏙᏇᏯᏈᎬᎢ]] ([[ᎤᏙᏇᏯ]]) - ''[[Oxydendrum arborum]]'' <ref name=nvwoti/> 
 
 ==Ꮖ==
+* [[Sumac|ᏆᎳᎫ]] - ''[[Rhus glabra]], ''[[Rhus copallina]]'', ᎠᎴ ''[[Rhus typhina]]''
 * [[Banana|ᏆᏁᎾ]] - ''[[Musa]]''
 * [[Plum|ᏆᏄᎾᏍᏗ]] - ''[[Prunus]]''
 * [[Peach|ᏆᏅ]] - ''[[Prunus persica]]''
@@ -132,6 +134,7 @@
 * [[Penderile weed|ᏒᏟ ᎤᏍᏗᎢ]] <ref name=h232/>
 
 == Ꮣ ==
+* [[Yellow root|ᏓᎳᏁᎢ]] - ''[[Xanthorhiza simplicissima)]]'' <ref name=nvwoti/>
 * [[Apricot|ᏓᎶᏂᎨ ᎠᏓᏛᏏᎩ]] - ''[[Prunus armeniaca]]''
 * [[Turnip|ᏓᏈᏌᏂ]] ([[ᏓᏆᏌᏅ]]) <ref name=h232/> - ''[[Brassica rapa]]''
 * [[Elm|ᏓᏩᏥᎳ]] <ref name=h231/> - ''[[Ulmus]]''
@@ -160,7 +163,8 @@
 == Ꮵ ==
 * [[Rabbit berry|ᏥᏍᏚ ᎤᏂᎩᏍᏗ]] <ref name=h232/> - ''[[Rosa virginiana]]''<!--What Rabbits Eat--><ref name=nc/>
 * [[Thistle|ᏥᏥ]] - ''[[Asteraceae]]'' ᎠᎴ ''[[Cirsium vulgare]]''
-* [[Polar|ᏥᏳ ᏢᎬᎢ]] - ''[[Populus]]''
+* [[Tulip tree|ᏥᏳ]] - ''[[Liriodendron tulipifera]]'' <ref name=nvwoti/>
+* [[Poplar|ᏥᏳ ᏢᎬᎢ]] - ''[[Populus]]''
 
 == Ꮶ ==
 * [[Tobacco|ᏦᎳ]] ([[ᏦᎸ]]) - ''[[Nicotiana]]''
@@ -191,6 +195,9 @@
 == Ᏻ ==
 * [[Hazelnut|ᏳᎩᏓ]] ([[ᎢᏩᎩᏓ]] <ref name=h231/>) - ''[[Corylus]]''
 * [[Hickory-weed|ᏳᏁᎩᏛ]] <ref name=h231/>
+
+==Ᏼ==
+*[[Dwarf ginseng|ᏴᏫ ᎤᏍᏗ]] - ''[[Panax trifolium]]'' <ref name=nvwoti/>
 
 </div><div style="float:left; width:100%;">
 
