--- a/ᏓᏎᏘ.mw
+++ b/ᏓᏎᏘ.mw
@@ -1,22 +1,20 @@
 [[image:Mirror.jpg|frame|right| ᏓᏎᏘ, ᎪᎱᏍᏗ ᎨᏒ  ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ.]]
-'''ᏓᏎᏘ''' ᎨᏒᎢ ᏄᏍᏛ ᏗᎧᏃᏗ ᎾᏍᎩ ᎤᏤᎵ ᎦᏚᎢ ᎤᎭ ᎣᏍᏛ [[specular reflection|specular ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ]]; Ꮎ ᎨᏒᎢ, ᎾᏍᎩ ᎨᏒᎢ ᎤᏩᎾᏕᏍᎩ ᏰᎵᏊ ᎤᏙᏢᏒ [[image|ᎾᏍᎩᏯᎢ]]. ᎯᎠ ᎤᎪᏗᏗ ᎠᏓᏙᎳᎩ ᏗᎦᎪᏗ ᏓᏎᏘ ᎨᏒᎢ ᎯᎠ ''ᎦᏃᎯᎵᏙ ᏓᏎᏘ'', ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎤᏩᎾᏕᏍᎩ ᎦᏚᎢ. [[Curved mirror|ᎠᎷᏚᎧᏘ ᏓᏎᏘ]]ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ, ᎠᏛᎯᏍᏙᏗ [[magnification|magnified]] ᎠᎴ demagnified ᎾᏍᎩᏯᎢ. 
+'''ᏓᏎᏘ''' ᎨᏒᎢ ᏄᏍᏛ ᏗᎧᏃᏗ ᎾᏍᎩ ᎤᏤᎵ ᎦᏚᎢ ᎤᎭ ᎣᏍᏛ [[specular reflection|specular ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ]]; Ꮎ ᎨᏒᎢ, ᎾᏍᎩ ᎨᏒᎢ ᎤᏩᎾᏕᏍᎩ ᏰᎵᏊ ᎤᏙᏢᏒ [[image|ᎾᏍᎩᏯᎢ]]. ᎯᎠ ᎤᎪᏗᏗ ᎠᏓᏙᎳᎩ ᏗᎦᎪᏗ ᏓᏎᏘ ᎨᏒᎢ ᎯᎠ ''ᎦᏃᎯᎵᏙ ᏓᏎᏘ'', ᎦᏙ ᎤᏍᏗ ᎤᎭ ᎤᏩᎾᏕᏍᎩ ᎦᏚᎢ. [[Curved mirror|ᎠᎷᏚᎧᏘ ᏓᏎᏘ]] ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ, ᎠᏛᎯᏍᏙᏗ [[magnification|magnified]] ᎠᎴ demagnified ᎾᏍᎩᏯᎢ. 
 
-ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎬᏙᏗ ᏓᏎᏘ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏪᏅᏒ ᎾᏍᎩᎾᎢ [[personal grooming|ᎠᏏᏴᏫ ᎠᏍᎦᏯ ᏣᎦᏨᏍᏗᏍᎩ]], ᎠᎴ ᏓᏎᏘ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎠᏏᎾᏍᏛ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᏯᏛᎿ ᏥᏄᏍᏗ [[telescope|ᎠᎧᏔᏘ]]ᎠᎴ [[laser]], ᎠᎴ ᎭᏫᎾᏗᏢ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎪᏢᏂᏓᏍᏗ. ᎤᎪᏗᏗ ᏓᏎᏘ ᎠᎴ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎾᏍᎩᎾᎢ [[visible light|ᎬᎪᏩᏛᏗ ᎠᏨᏍᏛ]], ᏱᏂᎬᏛᎾ, ᏓᏎᏘ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎾᏍᎩᎾᎢ ᏐᎢ [[wavelength]][[electromagnetic radiation|electromagnetic ᎤᏣᏘᎾ]] ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ, ᎾᏍᎩ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎠᎪᏩᏛᏗ [[#Instruments|ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ]].
+ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᎬᏙᏗ ᏓᏎᏘ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᏪᏅᏒ ᎾᏍᎩᎾᎢ [[personal grooming|ᎠᏏᏴᏫ ᎠᏍᎦᏯ ᏣᎦᏨᏍᏗᏍᎩ]], ᎠᎴ ᏓᏎᏘ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎠᏏᎾᏍᏛ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᏯᏛᎿ ᏥᏄᏍᏗ [[telescope|ᎠᎧᏔᏘ]] ᎠᎴ [[laser]], ᎠᎴ ᎭᏫᎾᏗᏢ ᏧᏂᎸᏫᏍᏓᏁᏗ ᎪᏢᏂᏓᏍᏗ. ᎤᎪᏗᏗ ᏓᏎᏘ ᎠᎴ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎾᏍᎩᎾᎢ [[visible light|ᎬᎪᏩᏛᏗ ᎠᏨᏍᏛ]], ᏱᏂᎬᏛᎾ, ᏓᏎᏘ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎾᏍᎩᎾᎢ ᏐᎢ [[wavelength]][[electromagnetic radiation|electromagnetic ᎤᏣᏘᎾ]] ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ, ᎾᏍᎩ ᎨᏒᎢ ᎭᏫᎾᏗᏢ ᎠᎪᏩᏛᏗ [[#Instruments|ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ]].
 
 ==ᏄᎵᏍᏔᏅ==
-[[Image:Waves_reflecting_from_a_curved_mirror.PNG|frame|right|ᎭᏫᎾᏗᏢ ᎪᎯ ᎠᏓᏕᏲᎲᏍᎩ ᎪᏪᎸ ᎦᏃᎯᎵᏙ ᎠᎺᏉᎯ ᏄᏍᏛ ᏨᏓᏓnusdv tsvdadakenedi ᎤᏣᏘᎾ  ᎯᎸᏍᎩ ᎢᎧᏁᏣ ᏓᏎᏘ  ᎤᏙᏢᏒ ᎠᎺᏉᎯ ᏩᏥᏂ ᏗᏂᎳᏫᎩ onto  ᎠᏰᎵ ᎪᏍᏓᏱ.]]
-ᎭᏫᎾᏗᏢ ᎦᏃᎯᎵᏙ ᏓᏎᏘ, [[parallel (geometry)|ᏚᏦᏔᏩᏘ]] ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ [[light|ᎠᏨᏍᏛ]] ᏗᎦᏁᏟᏴᏍᏗ Ꮝ ᎢᏚᏳᎪᏛ ᏥᏄᏍᏗ ᏂᎦᏛ, ᎾᎯᏳᎢ ᏙᎢ ᏩᎵᏃᎯᏯᏍᎬ ᏚᏦᏔᏩᏘ; ᎯᎠ ᎾᏍᎩᏯᎢ ᎪᏢᎯ Ꭲgotlvhi ignelvhi ᎾᎥᎢ ᎦᏃᎯᎵᏙ ᏓᏎᏘ ᎠᎴ [[virtual image|ᎠᎧᎵᏏᏐᏗ ᎾᏍᎩᏯᎢ]], ᎯᎠ ᎤᏠᏱ ᏂᎬᎢ ᏥᏄᏍᏗ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏗᎦᏘᎴᏍᏗ (ᎠᎪᏩᏛᏗ [[mirror image|ᏓᏎᏘ ᎾᏍᎩᏯᎢ]]). ᎾᎿᎢ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ [[concave mirror|ᎧᏂᎬᎾᎥ ᏓᏎᏘ]], ᎭᏢᏃ ᏚᏦᏔᏩᏘ ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ ᎠᏨᏍᏛ ᏗᏙᎳᎩ [[Convergence|convergent]] ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ, ᎾᏍᎩ ᎤᏤᎵ ᎠᏨᏍᏛ ᏗᎦᎾᏗᏫᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Focus (optics)|ᎠᏰᎵ]] ᎯᎠ ᏓᏎᏘ.   ᏭᎵᏍᏆᏛ, ᎾᎿᎢ ᎠᎴ [[convex mirror|ᎤᏚᏃᎯᏍᏔᏍᎧ ᏓᏎᏘ]], ᎭᏢᏃ ᏚᏦᏔᏩᏘ ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ ᏗᏙᎳᎩ ᏧᏓᎴᎿᎢ, ᎬᏙᏗ ᎯᎠ [[ray (optics)|ᎠᏨᏍᏛ]] ᎦᎾᏄᎪᎬᎢ ᏧᎾᏍᏗ ᏂᏛᎴᏅᏓ ᏧᏣᏔᏊ ᏗᎦᎾᏗᏫᏍᏗ "ᎣᏂᏗᏢ" ᎯᎠ ᏓᏎᏘ. ᎦᏐᏆᎸ ᎧᏂᎬᎾᎥ ᎠᎴ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏓᏎᏘ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏰᎵ ᏚᏦᏔᏩᏘ ᎠᏨᏍᏛ ᏏᏴᏫ ᎪᏍᏓᏱ ᎤᏍᏆᎸᎲ [[spherical aberration|ᎦᏐᏆᎸ ᏧᎾᏍᏗ]]. (ᎯᎠ ᎤᎵᎶᎯ ᎠᏰᎵ ᎪᏍᏓᏱ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ-ᎬᏔᏅᎯ ᎾᎥᏂᎨ ᎡᎵᏍᏗ, ᏱᏂᎬᏛᎾ.) [[Parabolic reflector|ᎯᎸᏍᎩ ᎢᎧᏁᏣ ᏗᏓᎨᏗ]]ᏗᎫᎪᏙᏗ ᎪᎯ, ᎠᎵᏍᎪᎸᏙᏗ ᎠᏴᏍᏙᏗ ᏚᏦᏔᏩᏘ ᎠᏨᏍᏛ (ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎠᏨᏍᏛ ᏂᏛᎴᏅᏓ ᎾᎿ ᎢᏴ ᏃᏈᏏ) ᎾᏍᏋ focused ᎤᏍᏗ ᎤᏓᏓᎸ; ᎾᎥᏂᎨᏍᏗ ᎤᎵᎶᎯ ᎪᏍᏓᏱ. ᎯᎸᏍᎩ ᎢᎧᏁᏣ ᏗᏓᎨᏗ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᎾᏙᎳᎩ ᎾᏍᎩᎾᎢ imaging nearby ᏓᎦᏘᎴᎦ, ᏱᏂᎬᏛᎾ.
+[[Image:Waves_reflecting_from_a_curved_mirror.PNG|frame|right|ᎭᏫᎾᏗᏢ ᎪᎯ ᎠᏓᏕᏲᎲᏍᎩ ᎪᏪᎸ ᎦᏃᎯᎵᏙ ᎠᎺᏉᎯ ᏄᏍᏛ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ ᎤᏣᏘᎾ  ᎯᎸᏍᎩ ᎢᎧᏁᏣ ᏓᏎᏘ  ᎤᏙᏢᏒ ᎠᎺᏉᎯ ᏩᏥᏂ ᏗᏂᎳᏫᎩ onto  ᎠᏰᎵ ᎪᏍᏓᏱ.]]
+ᎭᏫᎾᏗᏢ ᎦᏃᎯᎵᏙ ᏓᏎᏘ, [[parallel (geometry)|ᏚᏦᏔᏩᏘ]] ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ [[light|ᎠᏨᏍᏛ]] ᏗᎦᏁᏟᏴᏍᏗ Ꮝ ᎢᏚᏳᎪᏛ ᏥᏄᏍᏗ ᏂᎦᏛ, ᎾᎯᏳᎢ ᏙᎢ ᏩᎵᏃᎯᏯᏍᎬ ᏚᏦᏔᏩᏘ; ᎯᎠ ᎾᏍᎩᏯᎢ ᎪᏢᎯ ᎢᎬᏁᎸᎯ ᎾᎥᎢ ᎦᏃᎯᎵᏙ ᏓᏎᏘ ᎠᎴ [[virtual image|ᎠᎧᎵᏏᏐᏗ ᎾᏍᎩᏯᎢ]], ᎯᎠ ᎤᏠᏱ ᏂᎬᎢ ᏥᏄᏍᏗ ᎯᎠ ᎠᎴᏅᏗᏍᎬ ᏗᎦᏘᎴᏍᏗ (ᎠᎪᏩᏛᏗ [[mirror image|ᏓᏎᏘ ᎾᏍᎩᏯᎢ]]). ᎾᎿᎢ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ [[concave mirror|ᎧᏂᎬᎾᎥ ᏓᏎᏘ]], ᎭᏢᏃ ᏚᏦᏔᏩᏘ ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ ᎠᏨᏍᏛ ᏗᏙᎳᎩ [[Convergence|convergent]] ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ, ᎾᏍᎩ ᎤᏤᎵ ᎠᏨᏍᏛ ᏗᎦᎾᏗᏫᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[Focus (optics)|ᎠᏰᎵ]] ᎯᎠ ᏓᏎᏘ.   ᏭᎵᏍᏆᏛ, ᎾᎿᎢ ᎠᎴ [[convex mirror|ᎤᏚᏃᎯᏍᏔᏍᎧ ᏓᏎᏘ]], ᎭᏢᏃ ᏚᏦᏔᏩᏘ ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ ᏗᏙᎳᎩ ᏧᏓᎴᎿᎢ, ᎬᏙᏗ ᎯᎠ [[ray (optics)|ᎠᏨᏍᏛ]] ᎦᎾᏄᎪᎬᎢ ᏧᎾᏍᏗ ᏂᏛᎴᏅᏓ ᏧᏣᏔᏊ ᏗᎦᎾᏗᏫᏍᏗ "ᎣᏂᏗᏢ" ᎯᎠ ᏓᏎᏘ. ᎦᏐᏆᎸ ᎧᏂᎬᎾᎥ ᎠᎴ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏓᏎᏘ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏰᎵ ᏚᏦᏔᏩᏘ ᎠᏨᏍᏛ ᏏᏴᏫ ᎪᏍᏓᏱ ᎤᏍᏆᎸᎲ [[spherical aberration|ᎦᏐᏆᎸ ᏧᎾᏍᏗ]]. (ᎯᎠ ᎤᎵᎶᎯ ᎠᏰᎵ ᎪᏍᏓᏱ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ-ᎬᏔᏅᎯ ᎾᎥᏂᎨ ᎡᎵᏍᏗ, ᏱᏂᎬᏛᎾ.) [[Parabolic reflector|ᎯᎸᏍᎩ ᎢᎧᏁᏣ ᏗᏓᎨᏗ]]ᏗᎫᎪᏙᏗ ᎪᎯ, ᎠᎵᏍᎪᎸᏙᏗ ᎠᏴᏍᏙᏗ ᏚᏦᏔᏩᏘ ᎠᏨᏍᏛ (ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎠᏨᏍᏛ ᏂᏛᎴᏅᏓ ᎾᎿ ᎢᏴ ᏃᏈᏏ) ᎾᏍᏋ focused ᎤᏍᏗ ᎤᏓᏓᎸ; ᎾᎥᏂᎨᏍᏗ ᎤᎵᎶᎯ ᎪᏍᏓᏱ. ᎯᎸᏍᎩ ᎢᎧᏁᏣ ᏗᏓᎨᏗ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᏗᎾᏙᎳᎩ ᎾᏍᎩᎾᎢ imaging nearby ᏓᎦᏘᎴᎦ, ᏱᏂᎬᏛᎾ.
 
-ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ ᎠᏨᏍᏛ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ ᎤᏣᏘᎾ ᏓᏎᏘ ᎾᎾᎢ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ Ꮎ ᎨᏒᎢ ᎢᏗᎦᏗ Ꮝ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎢᏚᏳᎪᏛ. Ꮎ ᎨᏒᎢ, ᎢᏳᏃ ᎯᎠ ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ ᎠᏨᏍᏛ ᎨᏒᎢ ᎤᏥᏍᏓᎷᎩᏍᎬ ᎾᎿ ᏓᏎᏘ ᎤᏤᎵ ᎦᏚᎢ ᎾᎾᎢ 30° ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᏂᏛᎴᏅᏓ ᎠᎷᏚᎧᏘ, ᎾᎯᏳᎢ ᎾᏍᎩ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎪᏍᏓᏱ ᎢᏚᏳᎪᏛ ᎾᎾᎢ 30° ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᏂᏛᎴᏅᏓ ᎠᎷᏚᎧᏘ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎿᏗᏢ ᎢᏚᏳᎪᏛ.
+ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ ᎠᏨᏍᏛ ᏄᏍᏛ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ ᎤᏣᏘᎾ ᏓᏎᏘ ᎾᎾᎢ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ Ꮎ ᎨᏒᎢ ᎢᏗᎦᏗ Ꮝ ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᎢᏚᏳᎪᏛ. Ꮎ ᎨᏒᎢ, ᎢᏳᏃ ᎯᎠ ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ ᎠᏨᏍᏛ ᎨᏒᎢ ᎤᏥᏍᏓᎷᎩᏍᎬ ᎾᎿ ᏓᏎᏘ ᎤᏤᎵ ᎦᏚᎢ ᎾᎾᎢ 30° ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᏂᏛᎴᏅᏓ ᎠᎷᏚᎧᏘ, ᎾᎯᏳᎢ ᎾᏍᎩ ᏄᏍᏛ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ ᏂᏛᎴᏅᏓ ᎯᎠ ᎪᏍᏓᏱ ᎢᏚᏳᎪᏛ ᎾᎾᎢ 30° ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᏂᏛᎴᏅᏓ ᎠᎷᏚᎧᏘ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎿᏗᏢ ᎢᏚᏳᎪᏛ.
 
 ===ᎾᏍᎩᏯᎢ ᎭᏫᎾᏗᏢ ᏓᏎᏘ===
-
-{{main|Mirror image}}
 
 ==ᎪᏪᎳᏅ ᎠᎪᎵᏰᏗ==
 ᎢᎬᏱ ᏓᏎᏘ ᎨᏒᎩ ᎤᏠᏱᎭ ᏗᎬᎯᏓ ᎦᎶᏂᏗ [[metal|ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ]], ᎢᏳᏓᎵᎭ [[silver|ᎠᏕᎸ ᎤᏁᎬ]] ᎠᎴ [[copper|ᎠᏥᏱ]], ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎯᎠ [[Aranmula kannadi]].
 
-ᎤᎪᏗᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏓᏎᏘ ᎤᏠᏯᏍᏗ ᏌᎨᎢ ᏫᏚᏳᎪᏛ [[aluminium]] ᏓᏍᏆᏂᎪᏔᏅ ᎾᎿ ᏗᎬᎯᏓ [[glass|ᎠᏓᎨᏗ]]. ᎤᏅᏌ ᎠᎴ ''[[silvering|ᎦᏐᎯ ᎤᏍᎪᎸ ᏌᎪᏂᎨ]]'', ᎭᏢᏃ ᎯᎠ ᎪᎱᏍᏗ ᎨᏒ ᎦᏚᎢ ᎨᏒᎢ viewed ᏗᎬᏩᎶᏒ ᎯᎠ ᎠᏓᎨᏗ ᏗᎬᎯᏓ; ᎪᎯ ᏗᎪᏢᏅ ᎯᎠ ᏓᏎᏘ ᏗᏙᎳᎩ, ᎠᎴ ᎡᎳᏗᎨ ᎯᎠ ᎾᏍᎩᏯᎢ ᎢᎦ ᎣᏏ ᎯᎠ ᏓᏎᏘ ᎤᏍᏆᎸᎲ ᎤᏓᏎᎦᏤᏗ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱᏗᏢ ᎦᏚᎢ ᎯᎠ ᎠᏓᎨᏗ. ᎪᎯ ᏗᎦᎪᏗ ᏓᏎᏘ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ ᎬᏩᏚᏫᏛ 80% ᎯᎠ ᏄᎵᏍᏔᏂᏙᎸ ᎠᏨᏍᏛ. ᎯᎠ "ᎦᏐᎯ ᎠᏍᏆᎨᏂ" ᎯᎠ ᏓᏎᏘ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎦᎶᏁᏛ ᎬᎿᎨ ᎠᎧᎵᏬᎯ ᎠᏐᎠᏍᏙ ᎯᎠ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᏂᏛᎴᏅᏓ [[corrosion|ᎠᏲᎶᎬ]].
+ᎤᎪᏗᏗ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᏓᏎᏘ ᎤᏠᏯᏍᏗ ᏌᎨᎢ ᏫᏚᏳᎪᏛ [[aluminium]] ᏓᏍᏆᏂᎪᏔᏅ ᎾᎿ ᏗᎬᎯᏓ [[glass|ᎠᏓᎨᏗ]]. ᎤᏅᏌ ᎠᎴ ''[[silvering|ᎦᏐᎯ ᎤᏍᎪᎸ ᏌᎪᏂᎨ]]'', ᎭᏢᏃ ᎯᎠ ᎪᎱᏍᏗ ᎨᏒ ᎦᏚᎢ ᎨᏒᎢ viewed ᏗᎬᏩᎶᏒ ᎯᎠ ᎠᏓᎨᏗ ᏗᎬᎯᏓ; ᎪᎯ ᏗᎪᏢᏅ ᎯᎠ ᏓᏎᏘ ᏗᏙᎳᎩ, ᎠᎴ ᎡᎳᏗᎨ ᎯᎠ ᎾᏍᎩᏯᎢ ᎢᎦ ᎣᏏ ᎯᎠ ᏓᏎᏘ ᎤᏍᏆᎸᎲ ᎤᏓᏎᎦᏤᏗ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱᏗᏢ ᎦᏚᎢ ᎯᎠ ᎠᏓᎨᏗ. ᎪᎯ ᏗᎦᎪᏗ ᏓᏎᏘ ᏄᏍᏛ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ ᎬᏩᏚᏫᏛ 80% ᎯᎠ ᏄᎵᏍᏔᏂᏙᎸ ᎠᏨᏍᏛ. ᎯᎠ "ᎦᏐᎯ ᎠᏍᏆᎨᏂ" ᎯᎠ ᏓᏎᏘ ᎨᏒᎢ ᎢᏳᏓᎵᎭ ᎦᎶᏁᏛ ᎬᎿᎨ ᎠᎧᎵᏬᎯ ᎠᏐᎠᏍᏙ ᎯᎠ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᏂᏛᎴᏅᏓ [[corrosion|ᎠᏲᎶᎬ]].
 
 ᏓᏎᏘ ᎾᏍᎩᎾᎢ ᏚᏳᎪᏛ ᎠᎪᏩᏛᏗ ᏗᏔᏲᏍᏙᏗ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏄᏓᎷᎸᎾ ᎤᎭ ᎯᎠ ᏁᎵᏒ ᎠᏰᎵ ᎾᎿ ᎯᎠ ''ᎢᎬᏱᏗᏢ'' ᎦᏚᎢ ᎯᎠ ᏓᏎᏘ, ᎪᏢᎯᏐᏗ ᎯᎠ ᎾᏍᎩᏯᎢ ᎢᎦ ᎣᏏ. ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᏫᏚᏳᎪᏛ ᎾᎿ ᎯᎠ ᎢᎬᏱᏗᏢ ᎦᏚᎢ ᎠᎴ ᏂᎦᎥᏊ ᎫᏝᎢ ᎬᏙᏗ ᏌᎨᎢ, ᎤᎸᏑᏘ ᎠᏰᎵ (ᎢᏳᏓᎵᎭ [[silica]]) ᎠᏓᏍᏕᎸᏗ ᎠᏂ ᏂᏛᎴᏅᏓ ᎠᏲᎶᎬ. ᎭᏫᎾᏗᏢ ᎢᎦᏛ ᏕᎦᎸᏛ ᎧᏁᏌᎢ, ᎪᎯ ᎠᏰᎵ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᎧᏁᏉᎩ ᎯᎠ reflectivity ᏥᏄᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ.
 
@@ -24,81 +22,83 @@
 
 ==ᏗᏔᏲᏍᏙᏗ==
 [[image:mirror.globe.arp.500pix.jpg|thumb|right|200px|ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᎭᏫᎾᏗᏢ  ᎦᏐᏆᎸ ᎤᏚᏃᎯᏍᏔᏍᎧ ᏓᏎᏘ. ᎯᎠ ᏗᏟᎶᏍᏔᏅᏍᎩ ᎨᏒᎢ ᎠᎪᎲᎢ ᎾᎾᎢ ᎦᏚᎢ ᏚᏳᎪᏛ]]
+
 ===ᏗᎧᏃᏗᎢ===
 ====ᏗᎧᏃᏗᎢ ᏌᏊ ᎤᏤᎵ ᎣᏤᎵ ᎠᏰᎸ====
 ᏓᏎᏘ ᎨᏒᎢ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎠᎪᎵᏰᏗ ᎢᎦᏛᎭ ᏌᏊ ᎤᏤᎵ ᎠᏰᎸ ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎤᏦᏍᏗ ᎠᎴ ᏰᎵ ᏂᎨᏒᎾ ᎠᎪᏩᏛᏗ ᎾᎿ ᎢᏴ, ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ ᎤᎧᏛ, ᎠᎩᎳᎨᏂ ᎠᎴ ᎯᎠ ᏂᎦᏛ ᎠᏰᎸ. ᎪᎯ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎠᏕᎸ ᏗᏎᎯᏍᏗ [[physical appearance|ᏄᎵᏂᎬᎬ ᎦᎾᏄᎪᏨᎢ]] (ᎠᏠᏯᏍᏗᏍᎩ [[clothing|ᏗᏄᏬ]], [[make-up|ᎪᏢᏗ-ᎦᎸᎳᏗᏢ]], [[hair|ᎤᏍᏗᏰᎬ]], ᎠᎴ ᎤᏠᏯᏍᏗ.) ᎠᎴ ᎠᎨᏔᏗᏍᏗ ᎾᏅᎾᏗᏍᎬᎢ ᎪᏢᏗ-ᎦᎸᎳᏗᏢ, ᎠᏍᏓᏩᏛᏍᏗ, ᏛᏰᎶᎲ ᎤᏍᏗᏰᎬ, ᎣᏍᏛ ᎢᎬᏁᏗ ᏌᏊ ᎤᏤᎵ ᏓᎧᏁᎲ, ᎠᎴ ᎤᏠᏯᏍᏗ.
 
-ᎯᎠ optimal ᏂᎬᎢ ᎠᎴ ᎾᎿ ᎦᏙᎬ ᎾᏍᎩᎾᎢ ᏓᏎᏘ ᏗᎧᏃᏗᎢ ᏌᏊ ᎤᏤᎵ ᏂᎦᏛ ᎠᏰᎸ ᎨᏒᎢ ᎠᏰᎵ ᎢᏴ ᏌᏊ ᎤᏤᎵ ᏂᎦᏛᎢ ᎬᏙᏗ ᎯᎠ ᎦᏚᎢ ᎠᏍᏛᎢ ᎠᏰᎵ ᎯᎠ ᎦᏚᎢ ᏌᏊ ᎤᏤᎵ ᎠᏍᎪᎵ ᎠᎴ digatoli.
+ᎯᎠ optimal ᏂᎬᎢ ᎠᎴ ᎾᎿ ᎦᏙᎬ ᎾᏍᎩᎾᎢ ᏓᏎᏘ ᏗᎧᏃᏗᎢ ᏌᏊ ᎤᏤᎵ ᏂᎦᏛ ᎠᏰᎸ ᎨᏒᎢ ᎠᏰᎵ ᎢᏴ ᏌᏊ ᎤᏤᎵ ᏂᎦᏛᎢ ᎬᏙᏗ ᎯᎠ ᎦᏚᎢ ᎠᏍᏛᎢ ᎠᏰᎵ ᎯᎠ ᎦᏚᎢ ᏌᏊ ᎤᏤᎵ ᎠᏍᎪᎵ ᎠᎴ ᏗᎦᏙᎵ.
 
 ᎾᏍᎩ ᎨᏒᎢ ᏧᏣᏔᏊ [[superstition|ᏦᏕ]] Ꮎ ᎩᎶ ᎠᏏᏴᏫ ᎦᎪ ᏧᎵ ᏍᏆᎵᏓ ᏓᏎᏘ ᏫᎵ ᎠᎩᏍᏗ ᎦᎵᏉᎩ ᏧᏕᏘᏴᏓ ᎤᏲᎢ ᎤᏝᏅᏓᏕᎲ.
 
 ====ᏄᎾᏰᎯᏍᏛᎾ ᎠᎴ ᎠᎯᏗᎨ ᏗᎧᏃᏗᎢ====
-[[Rear-view mirror|ᎣᏂᏗᏢ-ᏗᎧᏃᏗᎢ ᏓᏎᏘ]]ᎠᎴ ᎢᎬᎾᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎠᎴ ᎾᎿ [[vehicle|ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]](ᏯᏛᎿ ᏥᏄᏍᏗ ᏗᏦᏙᏗ, ᎠᎴ ᎤᏍᏗ ᏓᏆᎴᎷ), ᎠᎵᏍᎪᎸᏙᏗ ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎠᎪᏩᏛᏗ ᏐᎢ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏓᎦᎷᏥ ᎦᎸᎳᏗᏢ ᎣᏂᏗᏢ ᎠᏂ.
+[[Rear-view mirror|ᎣᏂᏗᏢ-ᏗᎧᏃᏗᎢ ᏓᏎᏘ]] ᎠᎴ ᎢᎬᎾᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎠᎴ ᎾᎿ [[vehicle|ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ]](ᏯᏛᎿ ᏥᏄᏍᏗ ᏗᏦᏙᏗ, ᎠᎴ ᎤᏍᏗ ᏓᏆᎴᎷ), ᎠᎵᏍᎪᎸᏙᏗ ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎠᎪᏩᏛᏗ ᏐᎢ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᏓᎦᎷᏥ ᎦᎸᎳᏗᏢ ᎣᏂᏗᏢ ᎠᏂ.
 
-ᎢᎦᏛ [[motorcycle helmet|ᎤᏍᏗ ᏓᏆᎴᎷ ᎫᏢᎥᏍᎬ]]ᎤᎭ ᎤᏁᏍᎨᎲ-ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ-ᎤᏯᏅᎲ MROS (ᏎᏍᏗ ᏁᎵᏒ ᎠᎪᏩᏛᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ): ᎠᏫᏒᏗ ᏁᎵᏒ ᎦᏚᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎫᏢᎥᏍᎬ ᎦᏙ ᎤᏍᏗ ᎢᏧᎳ ᎤᏯᎾᏛᏁᏗ ᏥᏄᏍᏗ ᎣᏂᏗᏢ-ᏗᎧᏃᏗᎢ ᏓᏎᏘ [http://www.reevu.nl].
+ᎢᎦᏛ [[motorcycle helmet|ᎤᏍᏗ ᏓᏆᎴᎷ ᎫᏢᎥᏍᎬ]] ᎤᎭ ᎤᏁᏍᎨᎲ-ᎭᏫᎾᏗᏢ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ-ᎤᏯᏅᎲ MROS (ᏎᏍᏗ ᏁᎵᏒ ᎠᎪᏩᏛᏗ ᎢᏯᏛᏁᎵᏓᏍᏗ): ᎠᏫᏒᏗ ᏁᎵᏒ ᎦᏚᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᎫᏢᎥᏍᎬ ᎦᏙ ᎤᏍᏗ ᎢᏧᎳ ᎤᏯᎾᏛᏁᏗ ᏥᏄᏍᏗ ᎣᏂᏗᏢ-ᏗᎧᏃᏗᎢ ᏓᏎᏘ [http://www.reevu.nl].
 
 ᎾᎿᎢ ᎬᏂᎨᏒ ᏄᏍᏗ ᎣᏂᏗᏢ ᏗᎧᏃᏗᎢ [[sunglasses]], ᎦᏙ ᎤᏍᏗ ᎯᎠ ᎠᎦᏍᎦᏂ ᎤᎵᏍᏛ ᎯᎠ ᎠᎦᏍᎦᏂ ᎠᏓᎨᏗ ᎠᎴ ᎯᎠ ᏚᏳᎪᏛ ᎤᎵᏍᏛ ᎯᎠ ᏚᏳᎪᏛ ᎠᏓᎨᏗ ᏗᎦᎸᏫᏍᏓᏁᏗ ᏥᏄᏍᏗ ᏓᏎᏘ.
 
 [[Image:Spiegel.jpg|thumb]]
-''ᎦᏐᏆᎸ (ᎤᏚᏃᎯᏍᏔᏍᎧ) ᏓᏎᏘ'' ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎾᏀᏭᏅᎩ ᎾᎾᎢ [[road junction|ᏅᏃᎯ ᏧᏠᎯᏍᏗ]], ᎠᎴ ᏚᏅᏏᏴ ᏚᏙᏢᏒᎢ ᏯᏛᎿ ᏥᏄᏍᏗ [[parking lot|ᎠᏣᏪᏐᎸᏍᏙᏗ ᎠᏟᎶᎥ ᎦᏙᎯ]]ᎠᎴ ᏓᏓᎾᏅ, ᎠᎵᏍᎪᎸᏙᏗ ᏴᏫ ᎠᎪᏩᏛᏗ ᏴᏩᎤᏫᏛ ᏚᏅᏏᏴ ᏗᏓᏅᏗᏍᏙᏗ ᎤᏲᏨᎯ ᎾᎾᎯ ᏐᎢ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᎴ ᎠᎾᏓᎾᏁᏏᏙᎲ ᎤᏍᏗ ᏓᏆᎴᎷ.
+''ᎦᏐᏆᎸ (ᎤᏚᏃᎯᏍᏔᏍᎧ) ᏓᏎᏘ'' ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎾᎿᏭᏅᎩ ᎾᎾᎢ [[road junction|ᏅᏃᎯ ᏧᏠᎯᏍᏗ]], ᎠᎴ ᏚᏅᏏᏴ ᏚᏙᏢᏒᎢ ᏯᏛᎿ ᏥᏄᏍᏗ [[parking lot|ᎠᏣᏪᏐᎸᏍᏙᏗ ᎠᏟᎶᎥ ᎦᏙᎯ]] ᎠᎴ ᏓᏓᎾᏅ, ᎠᎵᏍᎪᎸᏙᏗ ᏴᏫ ᎠᎪᏩᏛᏗ ᏴᏩᏚᏫᏛ ᏚᏅᏏᏴ ᏗᏓᏅᏗᏍᏙᏗ ᎤᏲᏨᎯ ᎾᎾᎯ ᏐᎢ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ ᎠᎴ ᎠᎾᏓᎾᏁᏏᏙᎲ ᎤᏍᏗ ᏓᏆᎴᎷ.
 
-ᏓᏎᏘ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎢᎦᏛ ᎫᏓᎸᏙ ᎢᏯᏛᏁᎵᏓᏍᏗ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᏏᏴᏫ [[video camera|video ᏗᏓᏟᎶᏍᏙᏗ]] ᏰᎵᏇ ᎤᎾᏛᏁᎸᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏌᏊ [[angle|ᏓᏍᏓᏅᏅ ᏚᎷᏨ]] ᎾᎾᎢ ᎢᏳᏩᎣᏗ.
+ᏓᏎᏘ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎢᎦᏛ ᎫᏓᎸᏙ ᎢᏯᏛᏁᎵᏓᏍᏗ, ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᏏᏴᏫ [[video camera|video ᏗᏓᏟᎶᏍᏙᏗ]] ᏰᎵᏇ ᎤᎾᏛᏁᎸᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏌᏊ [[angle|ᏓᏍᏓᏅᏅ ᏚᎷᏨ]] ᎾᎾᎢ ᎢᏳᏩᎪᏗ.
 
 ᎦᎸᎳᏗ ᎢᎦ ᎣᏏ ᎤᏩᎾᏕᏍᎩ ᏓᏎᏘ ᎠᎴ ᎤᎵᏍᎨᏛ ᎾᏍᎩᎾᎢ ᎠᏃᏢᏍᎬ [[corner reflector|ᎤᏅᏏᏴ ᏗᏓᎨᏗ]], ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ ᎤᎢᏍᏓ ᎢᎦᎵᏍᏗᏍᎩ ᎦᎷᎯᏍᏗ, ᎠᎴ ᎢᏧᎳᎭ [[laser ranging|laser ᎤᏃᏴᎬ]] ᎯᎠ [[Moon|ᏒᏃᏱ ᎡᎯ ᏅᏙ]].
 
-ᏓᏎᏘ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ [[voyeurism]], e.g. [[upskirt]]. ᏐᎢ ᎬᏔᏂᏓᏍᏗ ᏓᏎᏘ ᎭᏫᎾᏗᏢ hedonistic ᏗᎵᏖᎸᏗ ᎠᏠᏯᏍᏛ ᎯᎠ lyudetiyvda 'ᏓᏎᏘ ᎾᎿ ᎯᎠ ᎦᎸᎳᏗᏢ ᎧᏅᏑᎸ' ᎾᏍᎩᎾᎢ ᎬᏙᏗ ᎾᎯᏳᎨᏒ ᏧᏠᎯᏍᏗ (ᎠᎪᏩᏛᏗ [[The Eagles|ᎯᎠ ᏬᎭᎵ]]' [[Hotel California|ᏧᎾᎵᏍᏓᏴᏗ California]]), ᎠᎴ ᎯᎠ ᎬᏙᏗ ᏓᏎᏘ ᎾᏍᎩᎾᎢ 'ᏛᏰᎶᎲ' ᎠᎴ ᏍᏆᎳ ᎧᏬᎳᏕᏍᎬ [[cocaine|ᎠᎵᎮᎵᏥᏓᏍᏗ]]. ᎬᏙᏗ ᎡᏆ ᏎᏍᏗ ᏓᏎᏘ ᎭᏫᎾᏗᏢ ᎭᏫᎾᏗᏢ ᎢᎬᏁᎸ ᎤᏜᏅᏛ ᏰᎵᏇ ᎢᏯᏛᏁᎯ ᎣᏏ ᎠᏰᎸᏗ ᏴᏫ ᎤᏤᎵ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ ᏧᏙᎳᏣᏅ ᎤᎾᏤᎵ [[ego|ᎢᎦᏛ]], ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[hall of mirrors|ᎦᎳᏅᏛ  ᏓᏎᏘ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Palace of Versailles|ᎦᏁᎸ  Versailles]].
+ᏓᏎᏘ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᎾᏍᎩᎾᎢ [[voyeurism]], e.g. [[upskirt]]. ᏐᎢ ᎬᏔᏂᏓᏍᏗ ᏓᏎᏘ ᎭᏫᎾᏗᏢ hedonistic ᏗᎵᏖᎸᏗ ᎠᏠᏯᏍᏛ ᎯᎠ ᎢᏳᏕᏘᏴᏓ 'ᏓᏎᏘ ᎾᎿ ᎯᎠ ᎦᎸᎳᏗᏢ ᎧᏅᏑᎸ' ᎾᏍᎩᎾᎢ ᎬᏙᏗ ᎾᎯᏳᎨᏒ ᏧᏠᎯᏍᏗ (ᎠᎪᏩᏛᏗ [[The Eagles|ᎯᎠ ᏬᎭᎵ]]' [[Hotel California|ᏧᎾᎵᏍᏓᏴᏗ ᎠᏕᎳᏧᏢᎢ]]), ᎠᎴ ᎯᎠ ᎬᏙᏗ ᏓᏎᏘ ᎾᏍᎩᎾᎢ 'ᏛᏰᎶᎲ' ᎠᎴ ᏍᏆᎳ ᎧᏬᎳᏕᏍᎬ [[cocaine|ᎠᎵᎮᎵᏥᏓᏍᏗ]]. ᎬᏙᏗ ᎡᏆ ᏎᏍᏗ ᏓᏎᏘ ᎭᏫᎾᏗᏢ ᎭᏫᎾᏗᏢ ᎢᎬᏁᎸ ᎤᏜᏅᏛ ᏰᎵᏇ ᎢᏯᏛᏁᎯ ᎣᏏ ᎠᏰᎸᏗ ᏴᏫ ᎤᏤᎵ ᎤᏚᎳᏗ ᎾᏍᎩᎾᎢ ᏧᏙᎳᏣᏅ ᎤᎾᏤᎵ [[ego|ᎢᎦᏛ]], ᏥᏄᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ [[hall of mirrors|ᎦᎳᏅᏛ  ᏓᏎᏘ]] ᎭᏫᎾᏗᏢ ᎯᎠ [[Palace of Versailles|ᎦᏁᎸ  Versailles]].
 
 ====ᏌᏊ-ᎦᎶᎯᏍᏗ ᏓᏎᏘ====
-''ᏌᏊ-ᎦᎶᎯᏍᏗ ᏓᏎᏘ'' ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ ᎢᎦᏛ ᏎᏍᏗ ᎯᎠ ᎠᏨᏍᏛ ᎠᎴ ᎤᎵᏍᎪᎸᏔᏅ ᎢᎦᏛ ᏐᎢ ᏎᏍᏗ ᎠᎦᏛᎴᎯᏍᏗ. ᎾᏍᎩ ᎨᏒᎢ ᏗᎬᎯᏓ ᎠᏓᎨᏗ coated ᎬᏙᏗ ᏫᏚᏳᎪᏛ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᎾᏍᎩ ᎤᏩᏒ ᎦᏲᎵ ᏔᎳᏚ ᎠᏍᏓᏩᏛᏍᏗ ᎤᎭᎨᏛ, ᎠᎵᏍᎪᎸᏙᏗ ᎢᎦᏛ ᎯᎠ ᎠᏨᏍᏛ ᏗᎬᏩᎶᏒ ᎯᎠ ᎦᏚᎢ (ᏂᏛᎴᏅᏓ ᎢᏧᎳ ᏗᏍᏆᎨᏂ). ᎾᏍᎩ ᎨᏒᎢ ᎬᏔᏅᎯ ᎠᏰᎵ ᎤᎳᏏᎩ ᎧᏅᏑᎸ ᎠᎴ ᏧᎸᏌᏓ ᎠᏨᏍᏓᏗ ᎧᏅᏑᎸ. ᎠᏂᏏᏴᏫᎭ ᎾᎿ ᎯᎠ ᏧᎸᏌᏓ ᎠᏨᏍᏓᏗ ᎠᏍᏆᎨᏂ ᎠᎪᏩᏛᏗ ᎤᎾᏤᎵ ᎣᏤᎵ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ - ᎾᏍᎩ ᎠᎦᏘᎭ ᎾᏍᎩᏯᎢ ᏄᎶᏒᏍᏛᎾ ᏓᏎᏘ. ᎠᏂᏏᏴᏫᎭ ᎾᎿ ᎯᎠ ᎤᎳᏏᎩ ᎠᏍᏆᎨᏂ ᎠᎪᏩᏛᏗ ᏗᎬᏩᎶᏒ ᎾᏍᎩ - ᎾᏍᎩ ᎠᎦᏘᎭ ᎾᏍᎩᏯᎢ [[transparency (optics)|ᎤᎸᏑᏘ]] ᏦᎳᏅ. ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎬᏔᏅᎯ ᎠᎦᏎᏍᏙᏗ ᏔᎵᏁ ᎠᏓᎴᏁ ᎠᏓᎳᏩᏎᏗ ᎠᎴ ᎤᏂᏩᏍᎩ (ᏩᏥ ᎠᏥᏄᎣᏫᏍᎬ ᎾᏍᎩᎾᎢ ᎦᎶᏄᎮᏛ). ᎯᎠ ᎤᏠᏱ ᏗᎦᎪᏗ ᏓᏎᏘ, ᎯᎳᎪ ᎢᏳ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[optical instrument|ᎠᎪᏩᏛᏗ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ]], ᎨᏒᎢ ᎤᏯᏅᎲ ''ᎠᏰᎵ ᎢᏴ-ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᏓᏎᏘ'' ᎠᎴ [[beam splitter|ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ splitter]]. Ꮝ ᎤᏰᎸᏛᎢ ᎨᏒᎢ ᏗᏍᏡᏴ ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ ᎠᏨᏍᏛ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎠᏰᎵ ᎢᏴ ᏓᏂᎶᏍᎬᎢ ᎦᏥᏃᏍᏛ ᏗᎬᏩᎶᏒ, ᎾᎯᏳᎢ ᎯᎠ ᏐᎢ ᎠᏰᎵ ᎢᏴ ᎨᏒᎢ reflected — ᎪᎯ ᎨᏒᎢ ᎤᎵᏍᎨᏓ ᎾᏍᎩᎾᎢ [[interferometry]].
+''ᏌᏊ-ᎦᎶᎯᏍᏗ ᏓᏎᏘ'' ᏄᏍᏛ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ ᎢᎦᏛ ᏎᏍᏗ ᎯᎠ ᎠᏨᏍᏛ ᎠᎴ ᎤᎵᏍᎪᎸᏔᏅ ᎢᎦᏛ ᏐᎢ ᏎᏍᏗ ᎠᎦᏛᎴᎯᏍᏗ. ᎾᏍᎩ ᎨᏒᎢ ᏗᎬᎯᏓ ᎠᏓᎨᏗ coated ᎬᏙᏗ ᏫᏚᏳᎪᏛ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᎾᏍᎩ ᎤᏩᏒ ᎦᏲᎵ ᏔᎳᏚ ᎠᏍᏓᏩᏛᏍᏗ ᎤᎭᎨᏛ, ᎠᎵᏍᎪᎸᏙᏗ ᎢᎦᏛ ᎯᎠ ᎠᏨᏍᏛ ᏗᎬᏩᎶᏒ ᎯᎠ ᎦᏚᎢ (ᏂᏛᎴᏅᏓ ᎢᏧᎳ ᏗᏍᏆᎨᏂ). ᎾᏍᎩ ᎨᏒᎢ ᎬᏔᏅᎯ ᎠᏰᎵ ᎤᎳᏏᎩ ᎧᏅᏑᎸ ᎠᎴ ᏧᎸᏌᏓ ᎠᏨᏍᏓᏗ ᎧᏅᏑᎸ. ᎠᏂᏏᏴᏫᎭ ᎾᎿ ᎯᎠ ᏧᎸᏌᏓ ᎠᏨᏍᏓᏗ ᎠᏍᏆᎨᏂ ᎠᎪᏩᏛᏗ ᎤᎾᏤᎵ ᎣᏤᎵ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ - ᎾᏍᎩ ᎠᎦᏘᎭ ᎾᏍᎩᏯᎢ ᏄᎶᏒᏍᏛᎾ ᏓᏎᏘ. ᎠᏂᏏᏴᏫᎭ ᎾᎿ ᎯᎠ ᎤᎳᏏᎩ ᎠᏍᏆᎨᏂ ᎠᎪᏩᏛᏗ ᏗᎬᏩᎶᏒ ᎾᏍᎩ - ᎾᏍᎩ ᎠᎦᏘᎭ ᎾᏍᎩᏯᎢ [[transparency (optics)|ᎤᎸᏑᏘ]] ᏦᎳᏅ. ᎾᏍᎩ ᎠᎾᏍᎬᏘ ᎾᏍᏋ ᎬᏔᏅᎯ ᎠᎦᏎᏍᏙᏗ ᏔᎵᏁ ᎠᏓᎴᏁ ᎠᏓᎳᏩᏎᏗ ᎠᎴ ᎤᏂᏩᏍᎩ (ᏩᏥ ᎠᏥᏄᏉᏫᏍᎬ ᎾᏍᎩᎾᎢ ᎦᎶᏄᎮᏛ). ᎯᎠ ᎤᏠᏱ ᏗᎦᎪᏗ ᏓᏎᏘ, ᎯᎳᎪ ᎢᏳ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[optical instrument|ᎠᎪᏩᏛᏗ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ]], ᎨᏒᎢ ᎤᏯᏅᎲ ''ᎠᏰᎵ ᎢᏴ-ᎤᏍᎪᎸ ᏌᎪᏂᎨ ᏓᏎᏘ'' ᎠᎴ [[beam splitter|ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ splitter]]. Ꮝ ᎤᏰᎸᏛᎢ ᎨᏒᎢ ᏗᏍᏡᏴ ᎦᏅᎯᏓ ᎦᎾᎳᏗᏍᏗ ᎠᏨᏍᏛ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ Ꮎ ᎠᏰᎵ ᎢᏴ ᏓᏂᎶᏍᎬᎢ ᎦᏥᏃᏍᏛ ᏗᎬᏩᎶᏒ, ᎾᎯᏳᎢ ᎯᎠ ᏐᎢ ᎠᏰᎵ ᎢᏴ ᎨᏒᎢ reflected — ᎪᎯ ᎨᏒᎢ ᎤᎵᏍᎨᏓ ᎾᏍᎩᎾᎢ [[interferometry]].
 
-ᎠᎵᏍᎦᏁᏍᎩ ᎤᏂᎸᏉᏗ ᎤᏬᎯᏳᏒ, ᏌᏊ-ᎦᎶᎯᏍᏗ ᏓᏎᏘ Ꮎ ᎤᏯᎾᏛᏁᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᎠᏰᎵ ᎢᎦᏘᎭ ᎠᏨᏍᏓᏗ ᏕᎧᏅᏑᎸ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎬᏂᎨᏒ ᏄᏍᏗ. ᎯᎠ ᏧᏂᎧᎿᏩᏛᏍᏗ ᎢᏳᏍᏗ ᏯᏛᎿ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᎵᏍᎪᎸᏙᏗ ᎾᏍᎩᎾᎢ ᎤᏙᎯᏳ ᎾᏍᎩ, ᏂᏚᏓᏂᏴᏒᏂ ᏌᏊ-ᎦᎶᎯᏍᏗ ᏓᏎᏘ (ᎠᏂᏏᏴᏫᎭ Ꮎ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏚᎳᏗ ᎤᏓᏎᎦᏤᏗ ᏄᎵᏂᎬᎬ); ᎢᏳᏃ ᏯᏛᎿ ᏄᏍᏛ ᏗᎧᏃᏗ ᎨᏒᎩ ᏰᎵᏊ, ᏌᏊ ᏰᎵᏇ ᎠᏍᏆᎵᏍᏗ ᎯᎠ [[second law of thermodynamics|ᏔᎵᏁ ᏗᎧᎿᏩᏛᏍᏗ  thermodynamics]] ᎠᎴ ᎪᏢᏗ ᏄᎵᏂᎬᎬ ᎠᏕᏴᎠᏍᎬ ᏂᏛᎴᏅᏓ ᎤᏴᏢ ᏗᎦᏘᎴᏍᏗ ᎤᏗᎴᎩ ᏌᏊ, ᎾᎥᎢ ᏩᎲᏍᎬ ᏯᏛᎿ ᏓᏎᏘ ᎠᏰᎵ ᎠᏂ.  (ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎧᏃᎯᏯᏍᏗ ᏗᎦᏘᎴᎩ ᏌᏊ-ᎦᎶᎯᏍᏗ ''ᏗᏦᎳᏅ'', ᏱᏂᎬᏛᎾ.<ref>{{cite web|url=http://www.usna.edu/Users/physics/mungan/Scholarship/FaradayIsolators.pdf |title=Faraday Isolators and Kirchhoff’s Law: A Puzzle |accessdate=2006-07-18 |last=Mungan |first=C.E. |year=1999 |format=pdf}}</ref><ref>Rayleigh, ''ᎾᎿ ᎯᎠ magnetic ᎠᏓᏠᎯᏍᏗ ᎠᏨᏍᏛ ᎠᎴ ᎯᎠ ᏔᎵᏁ ᏗᎧᎿᏩᏛᏍᏗ thermodynamics'', ᎤᏁᎳᏅ ᎤᏬᏢᏅ (London), Vol. '''64''', p. 577 (Oct. 10, 1901).</ref> [[Faraday isolator|ᎠᎪᏩᏛᏗ isolator]]ᎠᎴ ᏌᏊ-ᎦᎶᎯᏍᏗ ᏄᏍᏛ ᏗᎧᏃᏗ, Ꮎ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᎬᏙᏗ [[laser]].)
+ᎠᎵᏍᎦᏁᏍᎩ ᎤᏂᎸᏉᏗ ᎤᏬᎯᏳᏒ, ᏌᏊ-ᎦᎶᎯᏍᏗ ᏓᏎᏘ Ꮎ ᎤᏯᎾᏛᏁᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᎠᏰᎵ ᎢᎦᏘᎭ ᎠᏨᏍᏓᏗ ᏕᎧᏅᏑᎸ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎬᏂᎨᏒ ᏄᏍᏗ. ᎯᎠ ᏧᏂᎧᎿᏩᏛᏍᏗ ᎢᏳᏍᏗ ᏯᏛᎿ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᎵᏍᎪᎸᏙᏗ ᎾᏍᎩᎾᎢ ᎤᏙᎯᏳ ᎾᏍᎩ, ᏂᏚᏓᏂᏴᏒᏂ ᏌᏊ-ᎦᎶᎯᏍᏗ ᏓᏎᏘ (ᎠᏂᏏᏴᏫᎭ Ꮎ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏚᎳᏗ ᎤᏓᏎᎦᏤᏗ ᏄᎵᏂᎬᎬ); ᎢᏳᏃ ᏯᏛᎿ ᏄᏍᏛ ᏗᎧᏃᏗ ᎨᏒᎩ ᏰᎵᏊ, ᏌᏊ ᏰᎵᏇ ᎠᏍᏆᎵᏍᏗ ᎯᎠ [[second law of thermodynamics|ᏔᎵᏁ ᏗᎧᎿᏩᏛᏍᏗ  thermodynamics]] ᎠᎴ ᎪᏢᏗ ᏄᎵᏂᎬᎬ ᎠᏕᏴᎠᏍᎬ ᏂᏛᎴᏅᏓ ᎤᏴᏢ ᏗᎦᏘᎴᏍᏗ ᎤᏗᎴᎩ ᏌᏊ, ᎾᎥᎢ ᏩᎲᏍᎬ ᏯᏛᎿ ᏓᏎᏘ ᎠᏰᎵ ᎠᏂ. (ᎾᎿᎢ ᎨᏒᎢ Ꮭ ᎧᏃᎯᏯᏍᏗ ᏗᎦᏘᎴᎩ ᏌᏊ-ᎦᎶᎯᏍᏗ ''ᏗᏦᎳᏅ'', ᏱᏂᎬᏛᎾ.<ref>{{cite web|url=http://www.usna.edu/Users/physics/mungan/Scholarship/FaradayIsolators.pdf |title=Faraday Isolators and Kirchhoff’s Law: A Puzzle |accessdate=2006-07-18 |last=Mungan |first=C.E. |year=1999 |format=pdf}}</ref><ref>Rayleigh, ''ᎾᎿ ᎯᎠ magnetic ᎠᏓᏠᎯᏍᏗ ᎠᏨᏍᏛ ᎠᎴ ᎯᎠ ᏔᎵᏁ ᏗᎧᎿᏩᏛᏍᏗ thermodynamics'', ᎤᏁᎳᏅ ᎤᏬᏢᏅ (London), Vol. '''64''', p. 577 (Oct. 10, 1901).</ref> [[Faraday isolator|ᎠᎪᏩᏛᏗ isolator]] ᎠᎴ ᏌᏊ-ᎦᎶᎯᏍᏗ ᏄᏍᏛ ᏗᎧᏃᏗ, Ꮎ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎬᏔᏅᎯ ᎬᏙᏗ [[laser]].)
 
 ===ᎠᏏᎾᏒᎢ===
 ====ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ====
-[[Telescope|ᎠᎧᏔᏘ]]ᎠᎴ ᏐᎢ ᏚᏳᎪᏛ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ ᎬᏙᏗ ''ᎢᎬᏱᏗᏢ ᎤᏍᎪᎸ ᏌᎪᏂᎨ'' ᎠᎴ ''ᎢᎬᏱ ᎦᏚᎢ'' ᏓᏎᏘ, ᎭᏢᏃ ᎯᎠ ᎪᎱᏍᏗ ᎨᏒ ᎦᏚᎢ ᎨᏒᎢ ᎾᏀᏭᏅᎩ ᎾᎿ ᎯᎠ ᎢᎬᏱᏗᏢ (ᎠᎴ ᎢᎬᏱ) ᎦᏚᎢ ᎯᎠ ᎠᏓᎨᏗ, ᎦᏙ ᎤᏍᏗ ᎠᏓᏁᏗ ᎤᏟ ᎢᏲᏍᏛ ᎾᏍᎩᏯᎢ ᎢᎦ ᎣᏏ. ᎢᎦᏛ ᎠᏂ ᎬᏙᏗ ᎠᏕᎸ ᎤᏁᎬ, ᎠᎴ ᎤᎪᏗᏗ ᎠᎴ ᎦᏌᎧ ᏔᎷᎩᏍᎩ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᏁᎵᏒ ᎾᎾᎢ ᏍᏆᎳᎢ wavelengths ᎬᎾᏬᏍᎬ ᎠᏕᎸ ᎤᏁᎬ.
+[[Telescope|ᎠᎧᏔᏘ]] ᎠᎴ ᏐᎢ ᏚᏳᎪᏛ ᎪᎱᏍᏗ ᏗᎬᏔᏂᏓᏍᏗ ᎬᏙᏗ ''ᎢᎬᏱᏗᏢ ᎤᏍᎪᎸ ᏌᎪᏂᎨ'' ᎠᎴ ''ᎢᎬᏱ ᎦᏚᎢ'' ᏓᏎᏘ, ᎭᏢᏃ ᎯᎠ ᎪᎱᏍᏗ ᎨᏒ ᎦᏚᎢ ᎨᏒᎢ ᎾᎿᏭᏅᎩ ᎾᎿ ᎯᎠ ᎢᎬᏱᏗᏢ (ᎠᎴ ᎢᎬᏱ) ᎦᏚᎢ ᎯᎠ ᎠᏓᎨᏗ, ᎦᏙ ᎤᏍᏗ ᎠᏓᏁᏗ ᎤᏟ ᎢᏲᏍᏛ ᎾᏍᎩᏯᎢ ᎢᎦ ᎣᏏ. ᎢᎦᏛ ᎠᏂ ᎬᏙᏗ ᎠᏕᎸ ᎤᏁᎬ, ᎠᎴ ᎤᎪᏗᏗ ᎠᎴ ᎦᏌᎧ ᏔᎷᎩᏍᎩ, ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᏁᎵᏒ ᎾᎾᎢ ᏍᏆᎳᎢ wavelengths ᎬᎾᏬᏍᎬ ᎠᏕᎸ ᎤᏁᎬ.
 ᏂᎦᏛ ᎾᏍᎩ ᎯᎠ ᎠᏰᎵ ᎠᎴ ᎠᎯᏗᎨᎢ ᎠᏲᏍᏔᏅᎯ ᎠᎴ ᎧᏁᏍᏗ ᎢᏯᏛᏁᏗ ᎤᏤᎵᏛ ᎠᏱᏙᎲ.
-ᎤᏅᏌ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ 90% 95% ᎯᎠ ᏄᎵᏍᏔᏂᏙᎸ ᎠᏨᏍᏛ ᎯᎳᎪ ᎢᏳ ᎢᏤ.
+ᎤᏅᏌ ᏄᏍᏛ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ 90%–95% ᎯᎠ ᏄᎵᏍᏔᏂᏙᎸ ᎠᏨᏍᏛ ᎯᎳᎪ ᎢᏳ ᎢᏤ.
 ᎯᎠ ᎠᏰᎵ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎢᎬᎾᏔᏅᎯ ᎾᎥᎢ [[vacuum deposition|ᏅᏙᎲᏅ ᎦᎷᎯᏍᏗ]].
 protective ᎤᏔᎾ ᎦᏌᎴᎾ ᎨᏒᎢ ᎤᏠᏱᎭ ᎢᎬᎾᏔᏅᎯ ᎤᏓᎷᎸ ᎯᎠ ᏓᏎᏘ ᎨᏒᎢ ᎠᎲᏓ ᏂᏛᎴᏅᏓ ᎯᎠ ᏅᏙᎲᏅ, ᎢᎬᏂᏏᏍᎩ ᎯᎠ ᎠᏰᎵ ᎢᏳᏃ ᏰᎵ ᎠᎴᏂᏍᎬ ᎠᎦᎾᏫᏗᏍᎩ ᏥᏄᏍᏗ ᏄᎵᏍᏛ ᏥᏄᏍᏗ ᎾᏍᎩ ᎨᏒᎢ ᏗᏄᏪᏍᏗ ᎥᎴᏂᏙᎲ ᎠᎴ ᎤᎯᏌᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏃᎴ. ''ᎢᎬᏱᏗᏢ ᎤᏍᎪᎸ ᏌᎪᏂᎨ'' ᏓᏎᏘ ᎤᎭ ᎾᏍᏋ resurfaced ᎢᏳᏓᎵᎭᏊ ᎠᏍᏆᏂᎪᏙᏗ ᎤᎾᏤᎵ ᎢᎦ ᎣᏏ.
 
-ᎯᎠ reflectivity ᎯᎠ ᏓᏎᏘ ᎠᏰᎵ ᏰᎵᏇ ᎾᏍᏋ ᎡᎷᏪᎢ ᎬᏗᏍᎬᎢ [[Reflectometer|reflectometer]] ᎠᎴ ᎾᏍᎩᎾᎢ ᎾᏍᎩᎾ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᎾᏍᎩ ᏫᎵ ᎾᏍᏋ ᏄᏓᎴᎿᎥ ᎾᏍᎩᎾᎢ ᏄᏓᎴᎿᎥ [[wavelength|wavelengths]] ᎠᏨᏍᏛ. ᎪᎯ ᎨᏒᎢ exploited ᎭᏫᎾᏗᏢ ᎢᎦᏛ [[optical|ᎠᎪᏩᏛᏗ]] ᏗᎦᎸᏫᏍᏓᏁᏗ ᎪᏢᏗ [[cold mirror|ᎤᏴᏢ ᏓᏎᏘ]]ᎠᎴ [[hot mirror|ᎤᏗᎴᎩ ᏓᏎᏘ]]. ᎤᏴᏢ ᏓᏎᏘ ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎥᎢ ᎬᏗᏍᎬᎢ ᎤᎸᏑᏘ substrate ᎠᎴ ᎠᏑᏰᏛ ᎠᏰᎵ ᏭᏚᎸᏛ ᎬᏙᏗ Ꮎ ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᏁᎵᏒ ᎬᎪᏩᏛᏗ ᎠᏨᏍᏛ ᎠᎴ ᎤᏟ ᎢᎦᎢ transmissive [[infrared]] ᎠᏨᏍᏛ.
-ᎤᏗᎴᎩ ᏓᏎᏘ ᎨᏒᎢ ᎯᎠ ᎠᎿᏗᏢ, ᎯᎠ ᎠᏰᎵ ᎠᏑᏰᏛ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ infrared. ᏓᏎᏘ ᎦᏚᎢ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎠᏓᏁᎸ ᏌᎨᎢ ᏫᏚᏳᎪᏛ overcoatings ᎢᏧᎳ ᎤᏓᎪᏂᏲᎢᏍᏗ ᎠᏲᎶᎬ ᎯᎠ ᎦᏚᎢ ᎠᎴ ᎧᏁᏉᎩ ᎤᎾᏤᎵ reflectivity ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ ᎯᎠ ᏗᎧᏃᏗ ᎭᏢᏃ ᎤᏅᏌ ᏫᎵ ᎾᏍᏋ ᎬᏔᏅᎯ. ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᎦᏌᎧ ᏔᎷᎩᏍᎩ ᏓᏎᏘ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ coated ᎬᏙᏗ silicon dioxide ᎠᎴ magnesium fluoride. ᎯᎠ reflectivity ᏥᏄᏍᏗ ᎤᏯᎾᏛᏁᏗ wavelength ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎢᏧᎳ ᎯᎠ ᎾᏯᏛᎲᎢ ᎯᎠ ᎠᏰᎵ ᎠᎴ ᎾᎿ ᎯᎳᎪ ᎾᏍᎩ ᎨᏒᎢ ᎢᎬᎾᏔᏅᎯ.
+ᎯᎠ reflectivity ᎯᎠ ᏓᏎᏘ ᎠᏰᎵ ᏰᎵᏇ ᎾᏍᏋ ᎡᎷᏪᎢ ᎬᏗᏍᎬᎢ [[Reflectometer|reflectometer]] ᎠᎴ ᎾᏍᎩᎾᎢ ᎾᏍᎩᎾ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ ᎾᏍᎩ ᏫᎵ ᎾᏍᏋ ᏄᏓᎴᎿᎥ ᎾᏍᎩᎾᎢ ᏄᏓᎴᎿᎥ [[wavelength|wavelengths]] ᎠᏨᏍᏛ. ᎪᎯ ᎨᏒᎢ exploited ᎭᏫᎾᏗᏢ ᎢᎦᏛ [[optical|ᎠᎪᏩᏛᏗ]] ᏗᎦᎸᏫᏍᏓᏁᏗ ᎪᏢᏗ [[cold mirror|ᎤᏴᏢ ᏓᏎᏘ]] ᎠᎴ [[hot mirror|ᎤᏗᎴᎩ ᏓᏎᏘ]]. ᎤᏴᏢ ᏓᏎᏘ ᎨᏒᎢ ᎪᏢᏅᎯ ᎾᎥᎢ ᎬᏗᏍᎬᎢ ᎤᎸᏑᏘ substrate ᎠᎴ ᎠᏑᏰᏛ ᎠᏰᎵ ᏭᏚᎸᏛ ᎬᏙᏗ Ꮎ ᎨᏒᎢ ᎤᏟ ᎢᎦᎢ ᏁᎵᏒ ᎬᎪᏩᏛᏗ ᎠᏨᏍᏛ ᎠᎴ ᎤᏟ ᎢᎦᎢ transmissive [[infrared]] ᎠᏨᏍᏛ.
 
-ᎾᏍᎩᎾᎢ ᎠᏏᎾᏍᏛ [[optics|ᎠᎪᏩᏛᏗ]] ᏗᎦᎸᏫᏍᏓᏁᏗ, [[dielectric mirror|dielectric ᏓᏎᏘ]]ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ. ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎠᏓᎨᏗ (ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᏐᎢ ᏭᏚᎸᏛ ᎬᏙᏗ) substrates ᎾᎿ ᎦᏙ ᎤᏍᏗ ᏌᏊ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏫᏚᏳᎪᏛ [[dielectric]] ᏭᏚᎸᏛ ᎬᏙᏗ ᎠᎴ ᏓᏍᏆᏂᎪᏔᏅ, ᎤᏙᏢᏒ [[optical coating|ᎠᎪᏩᏛᏗ ᎠᏰᎵ]]. ᎾᎥᎢ ᎨᏯᏔᎯ ᎠᏑᏰᏛ ᎯᎠ ᏗᎦᎪᏗ ᎠᎴ ᎾᏯᏛᎲᎢ ᎯᎠ dielectric ᏫᏚᏳᎪᏛ, ᎯᎠ ᎠᏍᏓᏅᏅ [[wavelength]]ᎠᎴ ᎢᎦᎢ ᎨᏒ [[light|ᎠᏨᏍᏛ]] reflected ᏂᏛᎴᏅᏓ ᎯᎠ ᏓᏎᏘ ᏰᎵᏇ ᎾᏍᏋ ᏗᎪᎥᎯ. ᎯᎠ ᎣᎯᏍᏗ ᏓᏎᏘ ᎪᎯ ᏗᎦᎪᏗ ᏰᎵᏇ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ&gt;99.999% ᎯᎠ ᎠᏨᏍᏛ (ᎭᏫᎾᏗᏢ ᎠᏯᎣᎵ ᎠᏍᏓᏅᏅ wavelengths) ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏄᎵᏍᏔᏂᏙᎸ ᎾᎿ ᎯᎠ ᏓᏎᏘ. ᏯᏛᎿ ᏓᏎᏘ ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[lasers]].
+ᎤᏗᎴᎩ ᏓᏎᏘ ᎨᏒᎢ ᎯᎠ ᎠᎿᏗᏢ, ᎯᎠ ᎠᏰᎵ ᎠᏑᏰᏛ ᏄᏍᏛ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ infrared. ᏓᏎᏘ ᎦᏚᎢ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᎠᏓᏁᎸ ᏌᎨᎢ ᏫᏚᏳᎪᏛ overcoatings ᎢᏧᎳ ᎤᏓᎪᏂᏲᎢᏍᏗ ᎠᏲᎶᎬ ᎯᎠ ᎦᏚᎢ ᎠᎴ ᎧᏁᏉᎩ ᎤᎾᏤᎵ reflectivity ᎭᏫᎾᏗᏢ ᎢᎦᏛᎭ ᎯᎠ ᏗᎧᏃᏗ ᎭᏢᏃ ᎤᏅᏌ ᏫᎵ ᎾᏍᏋ ᎬᏔᏅᎯ. ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, ᎦᏌᎧ ᏔᎷᎩᏍᎩ ᏓᏎᏘ ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ coated ᎬᏙᏗ silicon dioxide ᎠᎴ magnesium fluoride. ᎯᎠ reflectivity ᏥᏄᏍᏗ ᎤᏯᎾᏛᏁᏗ wavelength ᎠᎵᏍᎦᏍᏙᏗ ᎾᎿ ᎢᏧᎳ ᎯᎠ ᎾᏯᏛᎲᎢ ᎯᎠ ᎠᏰᎵ ᎠᎴ ᎾᎿ ᎯᎳᎪ ᎾᏍᎩ ᎨᏒᎢ ᎢᎬᎾᏔᏅᎯ.
+
+ᎾᏍᎩᎾᎢ ᎠᏏᎾᏍᏛ [[optics|ᎠᎪᏩᏛᏗ]] ᏗᎦᎸᏫᏍᏓᏁᏗ, [[dielectric mirror|dielectric ᏓᏎᏘ]] ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ. ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎠᏓᎨᏗ (ᎠᎴ ᏱᏓᏟᎶᏍᏔᏅ ᏐᎢ ᏭᏚᎸᏛ ᎬᏙᏗ) substrates ᎾᎿ ᎦᏙ ᎤᏍᏗ ᏌᏊ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᏫᏚᏳᎪᏛ [[dielectric]] ᏭᏚᎸᏛ ᎬᏙᏗ ᎠᎴ ᏓᏍᏆᏂᎪᏔᏅ, ᎤᏙᏢᏒ [[optical coating|ᎠᎪᏩᏛᏗ ᎠᏰᎵ]]. ᎾᎥᎢ ᎨᏯᏔᎯ ᎠᏑᏰᏛ ᎯᎠ ᏗᎦᎪᏗ ᎠᎴ ᎾᏯᏛᎲᎢ ᎯᎠ dielectric ᏫᏚᏳᎪᏛ, ᎯᎠ ᎠᏍᏓᏅᏅ [[wavelength]] ᎠᎴ ᎢᎦᎢ ᎨᏒ [[light|ᎠᏨᏍᏛ]] reflected ᏂᏛᎴᏅᏓ ᎯᎠ ᏓᏎᏘ ᏰᎵᏇ ᎾᏍᏋ ᏗᎪᎥᎯ. ᎯᎠ ᎣᎯᏍᏗ ᏓᏎᏘ ᎪᎯ ᏗᎦᎪᏗ ᏰᎵᏇ ᏄᏍᏛ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ &gt;99.999% ᎯᎠ ᎠᏨᏍᏛ (ᎭᏫᎾᏗᏢ ᎠᏯᏙᎵ ᎠᏍᏓᏅᏅ wavelengths) ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᏄᎵᏍᏔᏂᏙᎸ ᎾᎿ ᎯᎠ ᏓᏎᏘ. ᏯᏛᎿ ᏓᏎᏘ ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[lasers]].
 
 ᎭᏫᎾᏗᏢ ᎡᎶᎯ, [[adaptive optics|adaptive ᎠᏨᏍᏛ]] ᎨᏒᎢ technique ᎠᏟᎶᏍᏗ ᏂᏙᏓᎳᎬᎾ ᎾᏍᎩᏯᎢ ᎠᎷᏚᎧᏘ ᎠᎴ ᏓᏓᏁᏤᎸ ᏓᏎᏘ ᎧᎵ ᏗᏙᎳᎩ ᎾᎿ timescale milliseconds, ᎥᏓᏓᎫᏴᎡᏗᏱ ᎾᏍᎩᎾᎢ ᎯᎠ ᎠᎷᏚᎧᏘ.
 
-ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎤᎪᏗᏗ ᏓᏎᏘ ᎠᎴ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ [[visible light|ᎬᎪᏩᏛᏗ ᎠᏨᏍᏛ]], ᎦᏚᎢ ᎪᎱᏍᏗ ᎨᏒ ᏐᎢ ᏚᏙᏢᏒ electromagnetic ᎤᏣᏘᎾ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ "ᏓᏎᏘ". ᎯᎠ ᏓᏎᏘ ᎾᏍᎩᎾᎢ ᏐᎢ ᎠᏍᏓᏅᏅ [[electromagnetic waves|electromagnetic ᎠᎺᏉᎯ]] ᎠᎴ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ
+ᎾᏍᎩ ᎤᏁᎳᎩ ᎯᎠ ᎤᎪᏗᏗ ᏓᏎᏘ ᎠᎴ ᎠᏎᎸ ᎢᏗᎬᏁᏗ ᏄᏍᏛ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ [[visible light|ᎬᎪᏩᏛᏗ ᎠᏨᏍᏛ]], ᎦᏚᎢ ᎪᎱᏍᏗ ᎨᏒ ᏐᎢ ᏚᏙᏢᏒ electromagnetic ᎤᏣᏘᎾ ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᎤᏯᏅᎲ "ᏓᏎᏘ". ᎯᎠ ᏓᏎᏘ ᎾᏍᎩᎾᎢ ᏐᎢ ᎠᏍᏓᏅᏅ [[electromagnetic waves|electromagnetic ᎠᎺᏉᎯ]] ᎠᎴ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ
 [[optics|ᎠᏨᏍᏛ]] ᎠᎴ [[astronomy|ᎡᎶᎯ]]. ᏓᏎᏘ ᎾᏍᎩᎾᎢ ᎦᏬᏂᏍᎩ ᎠᎺᏉᎯ ᎠᎴ ᎤᎵᏍᎨᏛ ᎢᏧᏓᎴᎩ [[radio telescope|ᎦᏬᏂᏍᎩ ᎠᎧᏔᏘ]].
 
 ====ᏂᎬᎢ====
-ᎬᏙᏗ ᎯᎠ [[sun|ᏅᏙ ᎢᎦ ᎡᎯ]] ᏥᏄᏍᏗ ᎠᏨᏍᏛ ᏗᏓᎴᎲᏍᎬ, ᏓᏎᏘ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ ᏂᎬᎢ, ᎾᎥᎢ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᏆᎨᏂ ᎯᎠ ᏓᏎᏘ. ᎯᎠ ᏂᎬᎢ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ ᎦᏬᎯᎸᏙᏗ ᎦᏅᎯᏓ ᎾᎿ ᎢᏴᎢ, ᏰᎵᏊ ᏱᎩ ᎦᎸᎳᏗᏢ 60 [[kilometre]]ᎾᎿ ᏧᎸᏌᏓ ᎢᎦ. ᎪᎯ technique ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᎾᎥᎢ [[Indigenous peoples of the Americas|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]] ᎠᏂᎳᏍᏓᎸ ᎠᎴ ᎤᏂᎪᏗᏗ [[military|militaries]] ᏩᏗᏱ ᎠᏓᏃᎯᏎᏗ ᎠᏰᎵ ᎾᎿ ᎢᏴ ᎾᎿ ᎢᏴᎢ.
+ᎬᏙᏗ ᎯᎠ [[sun|ᏅᏙ ᎢᎦ ᎡᎯ]] ᏥᏄᏍᏗ ᎠᏨᏍᏛ ᏗᏓᎴᎲᏍᎬ, ᏓᏎᏘ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ ᏂᎬᎢ, ᎾᎥᎢ ᏗᎧᏃᎩᏛ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᏍᏆᎨᏂ ᎯᎠ ᏓᏎᏘ. ᎯᎠ ᏂᎬᎢ ᏰᎵᏇ ᎾᏍᏋ ᎬᏔᏅᎯ ᎦᏬᎯᎸᏙᏗ ᎦᏅᎯᏓ ᎾᎿ ᎢᏴᎢ, ᏰᎵᏊ ᏱᎩ ᎦᎸᎳᏗᏢ 60 [[kilometer]] ᎾᎿ ᏧᎸᏌᏓ ᎢᎦ. ᎪᎯ technique ᏥᏄᏍᏛᎩ ᎬᏔᏅᎯ ᎾᎥᎢ [[Indigenous peoples of the Americas|ᎾᏰᎯᏯ ᏴᏩᏁᎬ]] ᎠᏂᎳᏍᏓᎸ ᎠᎴ ᎤᏂᎪᏗᏗ [[military|militaries]] ᏩᏗᏱ ᎠᏓᏃᎯᏎᏗ ᎠᏰᎵ ᎾᎿ ᎢᏴ ᎾᎿ ᎢᏴᎢ.
 
 ====ᎠᏂᏯᏫᏍᎩ ᏗᏔᏲᏍᏙᏗ====
-ᎾᏍᎩ ᎤᎭ ᏭᏪᏙᎢ ᏄᏪᏒᎩ Ꮎ [[Archimedes]] ᎬᏔᏅᎯ ᎡᏆ ᎠᏓᏅᏍᏗ ᏓᏎᏘ ᎦᎴᏴᏒ [[Ancient Rome|ᎶᎻ]] ᏥᏳ ᏧᏔᏅ ᎾᎯᏳᎨᏒ ᏗᎦᏘᎸᏍᏗ ᎾᎿ Syracuse.  ᎪᎯ ᎤᎭ ᎥᏝ ᏭᏪᏙᎢ ᎪᎯᏳᏔᏅ ᎠᎴ disproved, ᏱᏂᎬᏛᎾ, ᎤᎪᏗᏗ ᎤᎭ ᏩᏗᏱ ᎾᏍᎩ ᎯᎠ ᎠᎦᏛᏗ.  ᏝᏱᎪᎯᎩ, ᎾᎿ ᎤᏂᎸᏉᏗ [[Discovery Channel|ᎪᎷᏩᏛᏗ ᎤᎶᎯᏍᏗ]] ᎤᎾᏛᏁᎸᏗ, [[Mythbusters]], ᏐᏈᎵ ᏧᎾᏦᏟ ᏂᏛᎴᏅᏓ [[MIT]] ᎠᏁᎶᏔᏅ ᎠᏍᏆᏂᎪᏒᏗ ᎯᎠ ᏗᎦᏃᏣᎵ "Archimedes ᎠᏲᎱᎯᏍᏗ ᎠᏨᏍᏛ".  ᎤᏅᏌ ᎨᏒᎩ [http://web.mit.edu/2.009/www/lectures/10_Mythbusters.html successful] ᎾᎾᎢ ᎠᏂᎩᏍᏗᏍᎬ ᎠᏥᎸ ᎾᎿ ᏥᏳ ᎾᎾᎢ 75 ᏧᎾᎳᏏᏕᎾ ᎤᏣᏘᎾ, ᏱᏂᎬᏛᎾ, ᏧᏩᎫᏔᏅ ᎠᏁᎸᏙᏗ ᎠᏨᏍᏛ ᎯᎠ ᏥᏳ ᎾᎿ ᎠᏥᎸ ᎬᏗᏍᎬᎢ ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᏬᏗᎨ ᏓᏎᏘ ᏰᎵ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ Archimedes' ᎢᏳᏩᎣᏗ ᎨᏒᎩ ᎤᏄᎸᎲᏍᎩ, ᎠᎴ ᎯᎠ ᎢᏳᏩᎣᏗ ᎠᎩᏒᎯ ᎠᏥᏍᏝᏗᏍᏗ ᎯᎠ ᏥᏳ ᏯᏓᎢᏗᏏ ᎤᎭ ᎪᏢᏅᎯ Ꮝ ᎬᏙᏗ impractical, ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎯᎠ Mythbusters ᏐᏈᎵ ᏧᎾᏦᏟ ᏃᎵᏍᎬᎢ ᎯᎠ ᎢᏰᎵᏍᏗᎢ implausible.
+ᎾᏍᎩ ᎤᎭ ᏭᏪᏙᎢ ᏄᏪᏒᎩ Ꮎ [[Archimedes]] ᎬᏔᏅᎯ ᎡᏆ ᎠᏓᏅᏍᏗ ᏓᏎᏘ ᎦᎴᏴᏒ [[Ancient Rome|ᎶᎻ]] ᏥᏳ ᏧᏔᏅ ᎾᎯᏳᎨᏒ ᏗᎦᏘᎸᏍᏗ ᎾᎿ Syracuse.  ᎪᎯ ᎤᎭ ᎥᏝ ᏭᏪᏙᎢ ᎪᎯᏳᏔᏅ ᎠᎴ disproved, ᏱᏂᎬᏛᎾ, ᎤᎪᏗᏗ ᎤᎭ ᏩᏗᏱ ᎾᏍᎩ ᎯᎠ ᎠᎦᏛᏗ.  ᏝᏱᎪᎯᎩ, ᎾᎿ ᎤᏂᎸᏉᏗ [[Discovery Channel|ᎪᎷᏩᏛᏗ ᎤᎶᎯᏍᏗ]] ᎤᎾᏛᏁᎸᏗ, [[Mythbusters]], ᏐᏈᎵ ᏧᎾᏦᏟ ᏂᏛᎴᏅᏓ [[MIT]] ᎠᏁᎶᏔᏅ ᎠᏍᏆᏂᎪᏒᏗ ᎯᎠ ᏗᎦᏃᏣᎵ "Archimedes ᎠᏲᎱᎯᏍᏗ ᎠᏨᏍᏛ".  ᎤᏅᏌ ᎨᏒᎩ [http://web.mit.edu/2.009/www/lectures/10_Mythbusters.html successful] ᎾᎾᎢ ᎠᏂᎩᏍᏗᏍᎬ ᎠᏥᎸ ᎾᎿ ᏥᏳ ᎾᎾᎢ 75 ᏧᎾᎳᏏᏕᎾ ᎤᏣᏘᎾ, ᏱᏂᎬᏛᎾ, ᏧᏩᎫᏔᏅ ᎠᏁᎸᏙᏗ ᎠᏨᏍᏛ ᎯᎠ ᏥᏳ ᎾᎿ ᎠᏥᎸ ᎬᏗᏍᎬᎢ ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ ᏬᏗᎨ ᏓᏎᏘ ᏰᎵ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ Archimedes' ᎢᏳᏩᎪᏗ ᎨᏒᎩ ᎤᏄᎸᎲᏍᎩ, ᎠᎴ ᎯᎠ ᎢᏳᏩᎪᏗ ᎠᎩᏒᎯ ᎠᏥᏍᏝᏗᏍᏗ ᎯᎠ ᏥᏳ ᏯᏓᎢᏗᏏ ᎤᎭ ᎪᏢᏅᎯ Ꮝ ᎬᏙᏗ impractical, ᏄᎵᏍᏔᏅ ᎭᏫᎾᏗᏢ ᎯᎠ Mythbusters ᏐᏈᎵ ᏧᎾᏦᏟ ᏃᎵᏍᎬᎢ ᎯᎠ ᎢᏰᎵᏍᏗᎢ implausible.
 
-ᎪᎯᏊ ᎢᏴ ᏥᎩ [[Nuclear weapon|thermonuclear ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ]] ᎬᏙᏗ x-ᎠᏨᏍᏛ ᏓᏎᏘ ᎠᏰᎵ ᎤᏣᏘᎾ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱ ᎠᎴᏅᏗ onto ᎯᎠ ᎠᏂᎦᏲᎵ ᎪᏢᏗ ᏄᏍᏗᏓᏅ farvoring nuclear ᎤᎾᏓᏟᏌᏅ ''(ᎠᎪᏩᏛᏗ [[Nuclear weapons design|Nuclear ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ ᎠᏤᎸ ᎢᎬᏁᏗ]] ᎾᏍᎩᎾᎢ ᎤᏟ ᎢᎦᎢ ᏂᏕᎬᎿᏅᎢ)''.
+ᎪᎯᏊ ᎢᏴ ᏥᎩ [[Nuclear weapon|thermonuclear ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ]] ᎬᏙᏗ x-ᎠᏨᏍᏛ ᏓᏎᏘ ᎠᏰᎵ ᎤᏣᏘᎾ ᏂᏛᎴᏅᏓ ᎯᎠ ᎢᎬᏱ ᎠᎴᏅᏗ onto ᎯᎠ ᎠᏂᎦᏲᎵ ᎪᏢᏗ ᏄᏍᏗᏓᏅ favoring nuclear ᎤᎾᏓᏟᏌᏅ ''(ᎠᎪᏩᏛᏗ [[Nuclear weapons design|Nuclear ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ ᎠᏤᎸ ᎢᎬᏁᏗ]] ᎾᏍᎩᎾᎢ ᎤᏟ ᎢᎦᎢ ᏂᏕᎬᎿᏅᎢ)''.
 
 [[Image:Teller-Ulam device firing sequence.png|center|frame|ᎠᏔᏲᏍᏙᏗ  x-ᎠᏨᏍᏛ ᏓᏎᏘ ᎭᏫᎾᏗᏢ  thermonuclear ᎠᎾᎵᏏᎾᎯᏍᏗᏍᎬ.]]
 
 ===ᏂᏙᎸᏫᏍᏓᏁᎲᎾ===
 ====ᏓᏂᏥᎳᏓᏗᏍᎬ====
-ᏓᏎᏘ, ᎢᏯᏛᏁᎵᏓᏍᏗ ᎡᏆ ᎠᎴ unframed, ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[interior decoration|ᎭᏫᎾᏗᏢ ᏓᏂᏥᎳᏓᏗᏍᎬ]] ᎪᏢᏗ ᎠᎦᎣᎵ ᎤᏜᏅᏛ, ᎠᎴ ᎠᏔᏃᎯᏍᏙᏗ ᎯᎠ ᎬᎪᏩᏛᏗ ᏂᎬᎢ ᎧᏅᏑᎸ.
+ᏓᏎᏘ, ᎢᏯᏛᏁᎵᏓᏍᏗ ᎡᏆ ᎠᎴ unframed, ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[interior decoration|ᎭᏫᎾᏗᏢ ᏓᏂᏥᎳᏓᏗᏍᎬ]] ᎪᏢᏗ ᎠᎦᏙᎵ ᎤᏜᏅᏛ, ᎠᎴ ᎠᏔᏃᎯᏍᏙᏗ ᎯᎠ ᎬᎪᏩᏛᏗ ᏂᎬᎢ ᎧᏅᏑᎸ.
 
 ᎠᏣᏅᏙ ᎪᎱᏍᏗ ᎨᏒ [[sphere|ᎢᎦᎢ ᎢᎦᏘ]] ᏌᎨᎢ ᎠᎾᎦᎵᏍᎩ ᎦᏂᏱᏍᎩ-coated ᎠᏓᎨᏗ, ᏚᏂᎸᏫᏍᏓᏁᎲ ᏥᏄᏍᏗ ᎠᎦᏲᎳᏗᏍᎩ ᎠᏯᏖᎾ-ᏓᏍᏓᏅᏅ ᏚᎷᏨ ᏓᏎᏘ, ᎨᏒᎢ ᎦᎾᏗᏅᏓ ᏥᏄᏍᏗ [[Christmas tree|ᏓᏂᏍᏓᏲᎯᎲ ᏡᎬ]] ᏓᏂᏥᎳᏓᏗᏍᎬ ᎤᏯᏅᎲ ''ᎤᏓᏍᏓᏲᎯᏎᏗ''.
 
 ====ᎤᏓᏅᏘ ᏧᎾᎵᏃᎮᏗ====
 ᎯᎠ [[house of mirrors|ᎦᎳᏅᏛ  ᏓᏎᏘ]], ᏱᏓᏟᎶᏍᏔᏅ ᎠᏩᏛᏗ ᎭᏫᎾᏗᏢ [[amusement park|ᎠᏍᏆᏂᎪᏒᏗ ᎠᏣᏪᏐᎸᏍᏙᏗ]], ᎨᏒᎢ ᎠᎦᏎᏍᏙᏗ ᎭᏫᎾᏗᏢ ᎦᏙ ᎤᏍᏗ ᏎᏍᏗ ᎠᎷᏚᎧᏘ ᏓᏎᏘ ᎠᎴ ᎬᏔᏅᎯ ᎠᏛᎯᏍᏙᏗ ᏓᎦᏘᎴᎬ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᎯᎠ ᎠᏓᏩᏛᎯᏙᎯ.
 
-ᏓᏎᏘ ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[Magic (illusion)|ᎤᏕᎵᏛ ᎬᏗ ᎠᏛᏁᎸᏗ]] ᎪᏢᏗ [[illusion|ᎠᎦᎣᎵ ]].
+ᏓᏎᏘ ᎠᎴ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ [[Magic (illusion)|ᎤᏕᎵᏛ ᎬᏗ ᎠᏛᏁᎸᏗ]] ᎪᏢᏗ [[illusion|ᎠᎦᏙᎵ]].
 
-Illuminated ᎠᏕᏲᎲ [[disco ball|ᎤᏪᏙᎵᏍᏗ ᎠᎳᏍᎦᎶᏗ]]ᎫᏝᎢ ᎬᏙᏗ ᎤᏍᏗ ᏓᏎᏘ ᎠᎴ ᎬᏔᏅᎯ ᏩᏗᏅᏗ ᎠᏓᏅ ᎪᏢᏒᎢ ᎠᏨᏍᏛ ᏴᏩᎤᏫᏛ ᎠᎳᏍᎩᏓ ᎠᏯᏖᏃᎯ.
+Illuminated ᎠᏕᏲᎲ [[disco ball|ᎤᏪᏙᎵᏍᏗ ᎠᎳᏍᎦᎶᏗ]]ᎫᏝᎢ ᎬᏙᏗ ᎤᏍᏗ ᏓᏎᏘ ᎠᎴ ᎬᏔᏅᎯ ᏩᏗᏅᏗ ᎠᏓᏅ ᎪᏢᏒᎢ ᎠᏨᏍᏛ ᏴᏩᏚᏫᏛ ᎠᎳᏍᎩᏓ ᎠᏯᏖᏃᎯ.
 
 ====ᎠᏍᏕᏯᏍᏗ====
-ᏌᏊ ᎤᏓᏅᏗ [[:anamorphism|anamorphosis]] ᎤᎭ interposed ᏒᏙᏂ ᎠᎴ ᏒᏙᏂ ᏓᏎᏘ ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᏰᎵᏊ ᎠᏕᎶᎰᎯᏍᏗ ᎾᏍᎩᏯᎢ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎯᎠ ᏗᏟᎶᏍᏔᏅ ᎠᏍᏕᏯᏍᏗ ᎾᏍᎩᏯᎢ ᏁᎭ ᎾᏍᎩᎾᎢ ᎪᎯ ᎤᏰᎸᏛᎢ. ᎯᎠ ᎠᏍᏕᏯᏍᏗ ᎾᏍᎩᏯᎢ ᎨᏒᎢ ᎦᎶᏁᏛ ᎾᎿ ᎦᏃᎯᎵᏙ ᎦᏚᎢ ᏓᎦᎤᏫᏍᏗᏍᎬ ᎯᎠ ᏓᏎᏘ. ᎾᎥᎢ ᎠᎦᏘᏍᎬ ᏧᏓᎴᎿᎢ ᎾᎾᎯ ᎯᎠ ᏓᏎᏘ, ᎯᎠ ᎾᏍᎩᏯᎢ ᎦᎾᏄᎪᎦ ᏄᎶᏒᏍᏛᎾ.
+ᏌᏊ ᎤᏓᏅᏗ [[:anamorphism|anamorphosis]] ᎤᎭ interposed ᏒᏙᏂ ᎠᎴ ᏒᏙᏂ ᏓᏎᏘ ᎠᏃᏢᏍᎬ ᎾᏍᎩ ᏰᎵᏊ ᎠᏕᎶᎰᎯᏍᏗ ᎾᏍᎩᏯᎢ ᎦᏙ ᎤᏍᏗ ᎨᏒᎢ ᎯᎠ ᏗᏟᎶᏍᏔᏅ ᎠᏍᏕᏯᏍᏗ ᎾᏍᎩᏯᎢ ᏁᎭ ᎾᏍᎩᎾᎢ ᎪᎯ ᎤᏰᎸᏛᎢ. ᎯᎠ ᎠᏍᏕᏯᏍᏗ ᎾᏍᎩᏯᎢ ᎨᏒᎢ ᎦᎶᏁᏛ ᎾᎿ ᎦᏃᎯᎵᏙ ᎦᏚᎢ ᏓᎦᏚᏫᏍᏗᏍᎬ ᎯᎠ ᏓᏎᏘ. ᎾᎥᎢ ᎠᎦᏘᏍᎬ ᏧᏓᎴᎿᎢ ᎾᎾᎯ ᎯᎠ ᏓᏎᏘ, ᎯᎠ ᎾᏍᎩᏯᎢ ᎦᎾᏄᎪᎦ ᏄᎶᏒᏍᏛᎾ.
 
 ==ᎬᏙᏗ electromagnetic ᏓᏍᏟᏁᎦ ᏗᏓᎨᏗ==
-ᎯᎠ [[acoustic mirror|ᎠᏛᎩᏍᎬ ᏓᏎᏘ]]ᎨᏒᎩ ᎭᏫᎾᏗᏢ ᏗᏍᏆᎸᏙᏗ ᎬᏙᏗ ᎾᎯᏳᎨᏒ ᎠᎴᏫᏍᏙᏗ ᎠᏰᎵ [[World War 1|ᎡᎶᎯ ᏓᏄᏩ 1]] ᎠᎴ [[World War 2|ᎡᎶᎯ ᏓᏄᏩ 2]] ᎾᏍᎩᎾᎢ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ (ᎠᎴ ᎪᎷᏩᏛᏗ) [[sound|ᎤᏃᏴᎬ]] aircrafts. ᎯᎠ ᏅᎠᏯᏍᏗ [[atomic mirrors|ᎠᏍᏓᏩᏛᏍᏗ ᏓᏎᏘ]] ᎠᎵᏐᏍᏛ ᎯᎠ ᏗᏁᏝᎾ ᎾᏍᎩᏯᎢ ᎬᏗᏍᎬᎢ [[atom|ᎠᏍᏓᏩᏛᏍᏗ]]ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎠᏨᏍᏛ.
+ᎯᎠ [[acoustic mirror|ᎠᏛᎩᏍᎬ ᏓᏎᏘ]]ᎨᏒᎩ ᎭᏫᎾᏗᏢ ᏗᏍᏆᎸᏙᏗ ᎬᏙᏗ ᎾᎯᏳᎨᏒ ᎠᎴᏫᏍᏙᏗ ᎠᏰᎵ [[World War 1|ᎡᎶᎯ ᏓᏄᏩ 1]] ᎠᎴ [[World War 2|ᎡᎶᎯ ᏓᏄᏩ 2]] ᎾᏍᎩᎾᎢ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ (ᎠᎴ ᎪᎷᏩᏛᏗ) [[sound|ᎤᏃᏴᎬ]] aircrafts. ᎯᎠ ᏅᎠᏯᏍᏗ [[atomic mirrors|ᎠᏍᏓᏩᏛᏍᏗ ᏓᏎᏘ]] ᎠᎵᏐᏍᏛ ᎯᎠ ᏗᏁᏝᎾ ᎾᏍᎩᏯᎢ ᎬᏗᏍᎬᎢ [[atom|ᎠᏍᏓᏩᏛᏍᏗ]] ᎾᏍᎩᏍᎩᏂ ᏂᎨᏒᎾ ᎠᏨᏍᏛ.
 
 ==ᏓᏎᏘ ᎭᏫᎾᏗᏢ ᎪᏪᎸ ᏄᏍᏗᏓᏅ==
 ᎭᏫᎾᏗᏢ ᎠᎪᎢ ᎤᏁᎳᏅᎯ, ᎯᎠ ᎠᏥᎸᏉᏗ [[Perseus]] ᎠᏥᎸᎩ [[Medusa]] ᎾᎥᎢ ᎬᏗᏍᎬᎢ mirrored ᎠᏰᎵ ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ ᏥᏄᏍᏗ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᎩ ᎠᎨᏴ ᏂᎬᎢ ᎦᎾᏄᎪᏨᎢ.
@@ -109,15 +109,15 @@ Illuminated ᎠᏕᏲᎲ [[disco ball|ᎤᏪᏙᎵᏍᏗ ᎠᎳᏍᎦᎶᏗ]]Ꭻ
 
 [[Alfred Tennyson, 1st Baron Tennyson|Tennyson]] ᎤᏤᎵ [[Lady of Shalott|ᎠᎨᏴ  Shalott]] ᎤᎭ ᏓᏎᏘ ᎦᏙ ᎤᏍᏗ ᎠᎽᏰᎵ, releasing ᎠᏍᎩᎾᏗᏍᏗ ᎾᎿ ᎾᏍᎩ ᎠᎨᏴ.
 
-ᏓᏎᏘ, ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[labyrinth|ᏓᎧᏁᎲ]], ᎠᏎᏍᏙ ᏂᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ [[Argentina|ᎤᎾᏥ]] ᎪᏪᎵᏍᎩ [[Jorge Luis Borges]], ᎦᎪ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎠᏂ ᏥᏄᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ [[infinity|ᎢᎪᎯᏓ ᎨᏒ]], [[impersonation|ᏗᏟᎶᏍᏔᏅ]], ᎠᎴ [[illusion|agatoli]]. ᎭᏫᎾᏗᏢ ''[[Dreamtigers]]'', ᎾᏍᎩ ᎠᏍᎦᏯ ᎪᏪᎵᎠ ᎤᎾᏰᎯᏍᏗ Ꮎ ᎤᏤᎵ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᏯᏓᎢᏗᏏ ᎠᏓᏅᏍᏗ ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᎠᎴ ᏧᎾᏍᏗ ᎤᏙᏢᏒᎢ ᎤᏓᎷᎸ ᎤᏤᎵ digatoli. ᎭᏫᎾᏗᏢ ''[[Tlön, Uqbar, Orbis Tertius]]'', fictional [[heresy|heresiarch]] ᎧᏁᎢᏍᏗ Ꮎ "ᏓᏎᏘ ᎠᎴ [[copulation|ᏧᏠᎯᏍᏗ]] ᎠᎴ ᏗᏄᏬ ᏗᎦᏛᏗ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏅᏌ ᎢᏧᎳ ᎠᏓᏃᎮᏗ ᎯᎠ ᏗᏎᏍᏗ ᎠᏏᎦᏯ."
+ᏓᏎᏘ, ᎨᎳᏛᏍᏗ ᎬᏙᏗ [[labyrinth|ᏓᎧᏁᎲ]], ᎠᏎᏍᏙ ᏂᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎦᎸᏫᏍᏓᏁᏗ [[Argentina]] ᎪᏪᎵᏍᎩ [[Jorge Luis Borges]], ᎦᎪ ᎢᏳᏓᎵᎭ ᎬᏔᏅᎯ ᎠᏂ ᏥᏄᏍᏗ ᏗᎬᏟᎶᏍᏙᏗ [[infinity|ᎢᎪᎯᏓ ᎨᏒ]], [[impersonation|ᏗᏟᎶᏍᏔᏅ]], ᎠᎴ [[illusion|ᎠᎦᏙᎵ]]. ᎭᏫᎾᏗᏢ ''[[Dreamtigers]]'', ᎾᏍᎩ ᎠᏍᎦᏯ ᎪᏪᎵᎠ ᎤᎾᏰᎯᏍᏗ Ꮎ ᎤᏤᎵ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ ᏯᏓᎢᏗᏏ ᎠᏓᏅᏍᏗ ᎤᎾᏤᎵᏛ ᎤᎾᏙᏢᎯ ᎠᎴ ᏧᎾᏍᏗ ᎤᏙᏢᏒᎢ ᎤᏓᎷᎸ ᎤᏤᎵ ᏗᎦᏙᎵ. ᎭᏫᎾᏗᏢ ''[[Tlön, Uqbar, Orbis Tertius]]'', fictional [[heresy|heresiarch]] ᎧᏁᎢᏍᏗ Ꮎ "ᏓᏎᏘ ᎠᎴ [[copulation|ᏧᏠᎯᏍᏗ]] ᎠᎴ ᏗᏄᏬ ᏗᎦᏛᏗ, ᎣᏂ ᏧᏩᎫᏛ ᎤᏅᏌ ᎢᏧᎳ ᎠᏓᏃᎮᏗ ᎯᎠ ᏗᏎᏍᏗ ᎠᏂᏍᎦᏯ."
 
 ᎤᏠᏱ, [[Edgar Allan Poe]] expresses ᏂᎦᎸᏉᏛᎾ ᏓᏎᏘ ᎭᏫᎾᏗᏢ [[The Philosophy of Furniture|ᎯᎠ ᎤᏬᎳᏨᎯ  ᎦᎵᏦᏕ ᎠᏅᏗ]]:
 
-<blockquote>[R]egarded ᏧᎦᎴᏅᏓ ᏂᏛᎴᏅᏓ Ꮝ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ, ᎯᎠ ᏓᏎᏘ ᎠᏓᏁᎭ ᏫᎬᎵᏱᎵᏒ, ᎤᏩᎾᏕᏍᎩ, colourless, ᎠᏓᏕᏯᏙᏗ ᎦᏚᎢ, – ᎢᏳᏍᏗ ᏂᎪᎯᎸᎢ ᎠᎴ ᎠᎬᏂ ᏧᎾᏦᏯᏍᏗ. ᎠᎦᏎᏍᏔᏅ ᏥᏄᏍᏗ ᏗᏓᎨᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎤᎳᏂᎩᏛ ᎭᏫᎾᏗᏢ ᎠᏛᎯᏍᏗᏍᎬ ᏂᎬᎢ ᎠᎴ ᎤᏦᎠᏎᏗ ᏗᏙᎳᎩ: ᎠᎴ ᎯᎠ ᎤᏐᏅᎢ ᎨᏒᎢ ᎠᎭᏂ ᎠᏓᏕᏯᏙᏗ, ᎾᏍᎩ ᏂᎨᏒᎾ ᎭᏫᎾᏗᏢ ᏄᏓᎴ ᏂᎨᏒᎾ ᎠᏓᏎᎮᏗ ᎢᎦᏘᎭ ᎬᏙᏗ ᎯᎠ ᎧᏁᏉᎩ Ꮝ ᏙᏧᏓᎴᏅ, ᎠᎴ ᎭᏫᎾᏗᏢ ᎠᎾᎵᏐᏈᎸᏍᎬ ᏂᎪᎯᎸᎢ ᎧᏉᏤᎩ. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎧᏅᏑᎸ ᎬᏙᏗ ᏅᎩ ᎠᎴ ᎯᏍᎩ ᏓᏎᏘ ᎠᏓᏁᎳᏅ ᎾᎾᎢ ᎤᏍᏆᏂᎪᏗ, ᎨᏒᎢ, ᎾᏍᎩᎾᎢ ᏂᎦᏛ ᏂᏚᏰᎸᏛᎢ ᏗᏟᎶᏍᏗᏍᎩ ᎤᎾᏛᏁᎸᏗ, ᎧᏅᏑᎸ Ꮭ ᎤᏙᏢᏒᎢ ᎾᎾᎢ ᏂᎦᏛ. ᎢᏳᏃ ᎢᏧᎳ ᎦᏟᏐᏗ ᎪᎯ ᎤᏐᏅᎢ, ᎯᎠ ᎤᎾᏓᏡᎩ ᎠᏨᏍᏛ ᎾᏍᎩ ᎠᏨᏍᏛ, ᎢᏧᎳ ᎤᎭ ᎧᎵᏬᎯ ᎠᏰᎵ ᏗᏂᎦᏘᎴᎩ ᎬᏙᏗ ᎠᎴ ᎤᏦᎠᏎᏗ ᏄᎵᏍᏔᏅ.</blockquote>
+<blockquote>[R]egarded ᏧᎦᎴᏅᏓ ᏂᏛᎴᏅᏓ Ꮝ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ, ᎯᎠ ᏓᏎᏘ ᎠᏓᏁᎭ ᏫᎬᎵᏱᎵᏒ, ᎤᏩᎾᏕᏍᎩ, colorless, ᎠᏓᏕᏯᏙᏗ ᎦᏚᎢ, – ᎢᏳᏍᏗ ᏂᎪᎯᎸᎢ ᎠᎴ ᎠᎬᏂ ᏧᎾᏦᏯᏍᏗ. ᎠᎦᏎᏍᏔᏅ ᏥᏄᏍᏗ ᏗᏓᎨᏗ, ᎾᏍᎩ ᎨᏒᎢ ᎤᎳᏂᎩᏛ ᎭᏫᎾᏗᏢ ᎠᏛᎯᏍᏗᏍᎬ ᏂᎬᎢ ᎠᎴ ᎤᏦᎠᏎᏗ ᏗᏙᎳᎩ: ᎠᎴ ᎯᎠ ᎤᏐᏅᎢ ᎨᏒᎢ ᎠᎭᏂ ᎠᏓᏕᏯᏙᏗ, ᎾᏍᎩ ᏂᎨᏒᎾ ᎭᏫᎾᏗᏢ ᏄᏓᎴ ᏂᎨᏒᎾ ᎠᏓᏎᎮᏗ ᎢᎦᏘᎭ ᎬᏙᏗ ᎯᎠ ᎧᏁᏉᎩ Ꮝ ᏙᏧᏓᎴᏅ, ᎠᎴ ᎭᏫᎾᏗᏢ ᎠᎾᎵᏐᏈᎸᏍᎬ ᏂᎪᎯᎸᎢ ᎧᏁᏉᏤᎩ. ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ, ᎧᏅᏑᎸ ᎬᏙᏗ ᏅᎩ ᎠᎴ ᎯᏍᎩ ᏓᏎᏘ ᎠᏓᏁᎳᏅ ᎾᎾᎢ ᎤᏍᏆᏂᎪᏗ, ᎨᏒᎢ, ᎾᏍᎩᎾᎢ ᏂᎦᏛ ᏂᏚᏰᎸᏛᎢ ᏗᏟᎶᏍᏗᏍᎩ ᎤᎾᏛᏁᎸᏗ, ᎧᏅᏑᎸ Ꮭ ᎤᏙᏢᏒᎢ ᎾᎾᎢ ᏂᎦᏛ. ᎢᏳᏃ ᎢᏧᎳ ᎦᏟᏐᏗ ᎪᎯ ᎤᏐᏅᎢ, ᎯᎠ ᎤᎾᏓᏡᎩ ᎠᏨᏍᏛ ᎾᏍᎩ ᎠᏨᏍᏛ, ᎢᏧᎳ ᎤᎭ ᎧᎵᏬᎯ ᎠᏰᎵ ᏗᏂᎦᏘᎴᎩ ᎬᏙᏗ ᎠᎴ ᎤᏦᎠᏎᏗ ᏄᎵᏍᏔᏅ.</blockquote>
 
-''[[The King in the Window|ᎯᎠ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᏦᎳᏅ]]'' ᏧᏂᎸᏫᏍᏓᏁᏗ ᎤᏣᏘᎾ ᎢᎦᏛ ᎯᎠ ᎠᏓᏅᏖᏗ ᎠᏝᏅᎯ ᎠᏥᏄᎣᏫᏍᎬ ᎾᎥᎢ Lewis Carroll ᎤᏙᎷᏬᏗ Ꮝ ᎣᏤᎵ ᎠᏓᏃᎮᏗ ᏓᏄᏩ ᎠᏰᎵ ᎯᎠ ᎠᏓᏍᏕᎸᏗ ᎦᏁᎳ ᏗᏦᎳᏅ ᎠᎴ ᎯᎠ ᎦᎸᏉᏗ ᎠᏓᏅᏙ-ᎠᏯᏍᏗ ᎠᎩᏍᏗ ᏄᎬᏫᏳᏌᏕᎩ ᏓᏎᏘ.
+''[[The King in the Window|ᎯᎠ ᎤᎬᏫᏳᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᏦᎳᏅ]]'' ᏧᏂᎸᏫᏍᏓᏁᏗ ᎤᏣᏘᎾ ᎢᎦᏛ ᎯᎠ ᎠᏓᏅᏖᏗ ᎠᏝᏅᎯ ᎠᏥᏄᏉᏫᏍᎬ ᎾᎥᎢ Lewis Carroll ᎤᏙᎷᏬᏗ Ꮝ ᎣᏤᎵ ᎠᏓᏃᎮᏗ ᏓᏄᏩ ᎠᏰᎵ ᎯᎠ ᎠᏓᏍᏕᎸᏗ ᎦᏁᎳ ᏗᏦᎳᏅ ᎠᎴ ᎯᎠ ᎦᎸᏉᏗ ᎠᏓᏅᏙ-ᎠᏯᏍᏗ ᎠᎩᏍᏗ ᏄᎬᏫᏳᏌᏕᎩ ᏓᏎᏘ.
 
-ᎭᏫᎾᏗᏢ ᎯᎠ [[Harry Potter|ᏗᎦᏘᎸᏍᏗ ᏧᏓᏗᎩᏓ]] ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ᏗᎪᎵᏰᏗ ᎪᏪᎵ, ᎯᎠ [[Magical objects in Harry Potter#The Mirror of Erised|ᏓᏎᏘ  Erised]] ᎨᏒᎢ ᎤᏕᎵᏛ ᎬᏗ ᎠᏛᏁᎸᏗ ᏓᏎᏘ Ꮎ ᏄᏍᏛ ᏨᏓᏓᏄᏍᏛ ᏨᏓᏓᎡᏁᏗ Ꮝ viewer ᎤᏤᎵ deepest ᎤᏚᎵᎭ. ᎾᏍᎩ ᎾᏍᏇ featured ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ᎨᏒᎢ ᏗᎦᎪᏗ ᏄᏍᏛ ᏗᎧᏃᏗ ([[dark detector|ᎤᎳᏏᎩ detector]]) Ꮎ ᎤᏯᎾᏛᏁᏗ ᏥᏄᏍᏗ ᏓᏎᏘ, ᎠᏂᎶᏁᏍᎬ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ gazer ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏎᏍᏗ ᎠᎧᎵᏏᏐᏗ ᏗᏎᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᎾᏗᏢ; ᎤᏅᏌ ᎠᎴ ᏗᏂᏓᏄᏫ ᎠᎴ ᎤᎾᏤᎵ ᎾᎥᏂᎨᏍᏙᏗ ᎯᎠ viewer ᎾᏓᏛᏁ ᎤᎾᏤᎵ ᎤᏚᎳᏗ ᎠᏓᎾᏄᎳᏗ.
+ᎭᏫᎾᏗᏢ ᎯᎠ [[Harry Potter]] ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ᏗᎪᎵᏰᏗ ᎪᏪᎵ, ᎯᎠ [[Magical objects in Harry Potter#The Mirror of Erised|ᏓᏎᏘ  Erised]] ᎨᏒᎢ ᎤᏕᎵᏛ ᎬᏗ ᎠᏛᏁᎸᏗ ᏓᏎᏘ Ꮎ ᏄᏍᏛ ᏄᏍᏛ ᏨᏓᏓᎧᏁᏗ Ꮝ viewer ᎤᏤᎵ deepest ᎤᏚᎵᎭ. ᎾᏍᎩ ᎾᏍᏇ featured ᎭᏫᎾᏗᏢ ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ᎨᏒᎢ ᏗᎦᎪᏗ ᏄᏍᏛ ᏗᎧᏃᏗ ([[dark detector|ᎤᎳᏏᎩ detector]]) Ꮎ ᎤᏯᎾᏛᏁᏗ ᏥᏄᏍᏗ ᏓᏎᏘ, ᎠᏂᎶᏁᏍᎬ ᎾᏍᎩ ᏂᎨᏒᎾ ᎾᏍᎩ ᎤᏩᏒ ᎯᎠ gazer ᎠᎴ ᎾᏍᎩ ᎾᏍᏇ ᏎᏍᏗ ᎠᎧᎵᏏᏐᏗ ᏗᏎᏍᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᎣᎾᏗᏢ; ᎤᏅᏌ ᎠᎴ ᏗᏂᏓᏄᏫ ᎠᎴ ᎤᎾᏤᎵ ᎾᎥᏂᎨᏍᏙᏗ ᎯᎠ viewer ᎾᏓᏛᏁ ᎤᎾᏤᎵ ᎤᏚᎳᏗ ᎠᏓᎾᏄᎳᏗ.
 
 ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᎸᏓᎴᏍᎩ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ [[Johnny the Homicidal Maniac|Johnny ᎯᎠ ᎠᏓᎯᏍᏗ ᎤᎿᎸ ᎠᏍᎦᏯ]], ᎯᎠ ᎠᏏᎾᏍᏛ ᏗᎪᏢᏅ ᎢᏯᏛᏁᎵᏓᏍᏗ ᎠᏰᎵ ᎾᎿ ᏓᏎᏘ ᎠᎴ ᎤᏛᏅᎢᏍᏗ ᎤᏩᏒᎠᏍᎦᏯ ᎾᏍᏋ ᏰᎵᏆ ᎢᏯᏛᏁᏗ ᎠᎾᎩᏍᏗ "ᏗᎬᏩᎶᏒ" ᏄᏓᎴ, ᎤᏟ ᎢᏲᏍᏛ ᎡᎶᎯ, ᎠᎴ ᎤᏬᎯᏳᎭ Ꮎ ᎯᎠ ᎠᏓᏅᏖᏗ ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᏂᎪᎯᎸᎢ thwarted ᎨᏒᎢ ᎤᏍᏆᎸᎲ ᎦᎷᎶᎩ ᏅᏦᎠᏎᏍᎬᎾ.
 
@@ -131,21 +131,18 @@ Illuminated ᎠᏕᏲᎲ [[disco ball|ᎤᏪᏙᎵᏍᏗ ᎠᎳᏍᎦᎶᏗ]]Ꭻ
 
 ==ᎠᎪᏩᏛᏗ ᎾᏍᎩ ᎾᏍᏇ==
 *[[Anamorphosis|ᎠᏍᏕᏯᏍᏗ]] ᎠᎴ [[Anamorphism]]
-*[[Aranmula kannadi]]
 *[[Bronze Mirrors|ᏬᏗᎨ ᏓᏎᏘ]]
 *[[Cold Mirror|ᎤᏴᏢ ᏓᏎᏘ]] ᎠᎴ [[Hot Mirror|ᎤᏗᎴᎩ ᏓᏎᏘ]]
 *[[Digital Micromirror Device|Digital Micromirror ᏄᏍᏛ ᏗᎧᏃᏗ]]
-*[[Home decor|ᎣᏪᏅᏒ decor]]
 *[[Mirror Master|ᏓᏎᏘ ᏄᎬᏫᏳᏌᏕᎩ]]
 *[[Mirror Image|ᏓᏎᏘ ᎾᏍᎩᏯᎢ]]
 *[[Periscope|ᎠᎪᏩᏛᏗ]]
 *[[Rear-view mirror|ᎣᏂᏗᏢ-ᏗᎧᏃᏗᎢ ᏓᏎᏘ]]
 *[[Silvering|ᎠᏕᎸ ᎤᏁᎬ]]
-*[[TLV Mirror|TLV ᏓᏎᏘ]] - ᎯᎸᎯᏳᎢ ᏗᎦᎪᏗ Chinese ᏓᏎᏘ ᏂᏛᎴᏅᏓ ᎯᎠ [[Han Dynasty|Han ᏓᎳᏏᏛ]].
 *[[Venus effect|ᎠᏨᏍᏛ ᎢᏳᎵᏍᏙᏗ]]
 
 ==ᏓᏓᏚᎬ ᎪᏪᎵ==
-<references/>
+{{reflist}}
 
 == ᎪᏪᎵ==
 *''ᏓᏎᏘ, ᏓᏎᏘ: ᎧᏃᎮᏍᎩ ᎯᎠ ᏴᏫ ᎬᎨᏳᎢ ᎾᎾᏛᏁᎲ ᎬᏙᏗ ᏄᏍᏛ ᏛᏙᏓᎧᏂᏍᎬ'', ᎤᏙᏪᎸ Pendergrast. ᏄᏦᏍᏛᎾ ᏗᎪᏪᎵ (2003). ISBN 0465054714.
